--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"মুখাৱয়ব আৰু <xliff:g id="WATCH">%s</xliff:g> যোগ দিয়া হৈছে"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"মুখাৱয়ব, ফিংগাৰপ্ৰিণ্ট আৰু <xliff:g id="WATCH">%s</xliff:g> যোগ দিয়া হৈছে"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"মুখাৱয়ব, ফিংগাৰপ্ৰিণ্ট আৰু <xliff:g id="WATCH">%s</xliff:g> যোগ দিয়া হৈছে"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"পৰিচয় পৰীক্ষা কৰাটো অন আছে আৰু বায়’মেট্ৰিকৰ প্ৰয়োজন"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Authenticatorৰ দ্বাৰা দূৰৰ পৰা আনলক কৰা"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"ঘড়ী যোগ দিয়া হৈছে"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"আপোনাৰ ঘড়ীটো ছেট আপ কৰক"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"কীব’ৰ্ডৰ ছেটিং"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"অধিক ছেটিং"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ফাৰ্মৱেৰৰ আপডে\'ট, ইয়াৰ বিষয়ে আৰু বহুতো"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"কিটিপ আৰু সহায়"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ডিভাইচৰ ব্লুটুথৰ ঠিকনা: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ডিভাইচৰ ব্লুটুথ ঠিকনা:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ডিভাইচটো পাহৰিবনে?"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"ৰিছেট কৰক"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"সংশোধক চাবি বাছনি কৰক"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>ৰ বাবে এটা নতুন চাবি বাছনি কৰক:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> লে’আউট"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ডিফ\'ল্ট"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"স্বয়ংক্ৰিয়: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"উচ্চখাপৰ"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"দিব্যাংগসকলৰ সুবিধাৰ বুটামটো <xliff:g id="SERVICE">%1$s</xliff:g> হিচাপে ছেট কৰা হৈ আছে। বিবৰ্ধন ব্যৱহাৰ কৰিবলৈ বুটামটো হেঁচি ৰাখক আৰু তাৰ পাছত বিবৰ্ধন বাছনি কৰক।"</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"সাধ্য সুবিধাৰ নিৰ্দেশ <xliff:g id="SERVICE">%1$s</xliff:g>ত ছেট কৰা হৈছে। বিবৰ্ধন ব্যৱহাৰ কৰিবলৈ দুটা আঙুলিৰে স্ক্ৰীনৰ তলৰ পৰা ওপৰলৈ ছোৱাইপ কৰক আৰু ধৰি ৰাখক। তাৰপাছত বিবৰ্ধন বাছনি কৰক।"</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"ভলিউম চাবিৰ শ্বৰ্টকাট"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"শ্বৰ্টকাটৰ ছেটিং"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"লক স্ক্ৰীনৰ পৰা শ্বৰ্টকাট"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"সুবিধাৰ শ্বৰ্টকাটটোক লক স্ক্ৰীনখনৰ পৰা অন কৰিবলৈ অনুমতি দিয়ক। দুয়োটা ভলিউম কী কিছুসময়ৰ বাবে ধৰি থাকক।"</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"সাধ্য-সুবিধাৰ বুটাম"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"সাধ্য-সুবিধাৰ বুটাম আৰু নিৰ্দেশ"</string>
@@ -3347,7 +3351,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"অফ আছে"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{এটাও নাই}=1{1 খন সময়সূচী ছেট কৰা হৈছে}one{# খন সময়সূচী ছেট কৰা হৈছে}other{# খন সময়সূচী ছেট কৰা হৈছে}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"অসুবিধা নিদিব"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"অগ্ৰাধিকাৰপ্ৰাপ্ত ম’ড"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"ব্যাঘাত কমাওক আৰু শোৱাৰ সময়, কাম, গাড়ী চলোৱা আৰু ইয়াৰ মাজৰ আটাইবোৰ কামৰ ম’ডসমূহৰ জড়িয়তে নিজৰ মনৰ ওপৰত নিয়ন্ত্ৰণ আনক।"</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"আপোনাৰ নিজৰ ম’ড সৃষ্টি কৰক"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"কেৱল গুৰুত্বপূর্ণ লোক আৰু এপ্‌সমূহৰ পৰা জাননী পাওক"</string>
@@ -3642,9 +3647,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"এইটোৱে বাৰ্তাৰ প্ৰত্যুত্তৰ দিব পাৰে আৰু জাননীত থকা বুটামসমূহৰ জৰিয়তে কাৰ্যব্যৱস্থা ল’ব পাৰে, য’ত জাননী স্নুজ কৰা অথবা অগ্ৰাহ্য কৰা আৰু কলৰ উত্তৰ দিয়া কাৰ্য অন্তৰ্ভুক্ত হয়।"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ছেটিং সলনি কৰক"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"এইটোৱে অসুবিধা নিদিব ম’ডটো অন অথবা অফ কৰিব আৰু তাৰ সৈতে জড়িত ছেটিং সলনি কৰিব পাৰে।"</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"ই অগ্ৰাধিকাৰ ম\'ড পৰিচালনা আৰু সক্ৰিয় কৰিব পাৰে আৰু প্ৰাসংগিক ছেটিং সলনি কৰিব পাৰে।"</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"আপুনি যদি <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>ৰ বাবে জাননীৰ এক্সেছ অফ কৰে, তেন্তে অসুবিধা নিদিবৰ এক্সেছো অফ কৰা হ\'ব পাৰে।"</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"আপুনি যদি <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>ৰ বাবে জাননীৰ এক্সেছ অফ কৰে, অগ্ৰাধিকাৰ ম\'ডৰ এক্সেছো অফ কৰা হ\'ব পাৰে।"</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"অফ কৰক"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"বাতিল কৰক"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ৰিয়েল-টাইম"</string>
@@ -3705,9 +3712,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"অসুবিধা নিদিবৰ অনুমতি"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"অসুবিধা নিদিব ম’ডক অনুমতি দিয়ক"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ইনষ্টল কৰি থোৱা কোনো এপে অসুবিধা নিদিবৰ এক্সেছ বিচৰা নাই"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"অগ্ৰাধিকাৰ ম\'ডৰ এক্সেছ"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"অগ্ৰাধিকাৰ ম\'ডৰ এক্সেছ দিয়ক"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"ইনষ্টল কৰি ৰখা কোনো এপে অগ্ৰাধিকাৰ ম\'ডৰ এক্সেছৰ বাবে অনুৰোধ জনোৱা নাই"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"আপুনি এই এপ্‌টোৰ পৰা জাননী পঠিয়াবলৈ অনুমতি দিয়া নাই"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"আপোনাৰ অনুৰোধমৰ্মে, Androidএ জাননীসমূহৰ এই শ্ৰেণীটোক এই ডিভাইচটোত দৃশ্যমান হ\'বলৈ দিয়া নাই"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"আপোনাৰ অনুৰোধমৰ্মে, Androidএ জাননীসমূহৰ এই গোটটোক এই ডিভাইচটোত দৃশ্যমান হ\'বলৈ দিয়া নাই"</string>
@@ -4098,9 +4108,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"জাননীৰ এক্সেছ অন হৈ থকাৰ বাবে অন কৰি ৰাখিবই লাগিব"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g>ৰ অসুবিধা নিদিবলৈ থকা এক্সেছ প্ৰত্যাহাৰ কৰিবনে?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"এই এপে সৃষ্টি কৰা আটাইবোৰ অসুবিধা নিদিব নিয়ম আঁতৰোৱা হ\'ব।"</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g>ৰ বাবে অগ্ৰাধিকাৰ ম\'ডৰ এক্সেছ দিবনে?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"এই এপ্‌টোৱে অসুবিধা নিদিব সুবিধাটো অন/অফ কৰিব পাৰিব, অগ্ৰাধিকাৰ ম\'ড পৰিচালনা আৰু সক্ৰিয় কৰিব পাৰিব আৰু প্ৰাসংগিক ছেটিং সলনি কৰিব পাৰিব।"</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g>ৰ বাবে অগ্ৰাধিকাৰ ম\'ডৰ এক্সেছ বাতিল কৰিবনে?"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"এই এপ্‌টোৱে সৃষ্টি কৰা আটাইবোৰ ম\'ড আঁতৰোৱা হ\'ব।"</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"অপ্টিমাইজ নকৰিব"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimize"</string>
@@ -5151,52 +5164,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>এ এই ফ’নটোৰ সৈতে সংযোগ কৰিব বিচাৰিছে।\n\nআপুনি আগতে [<xliff:g id="DEVICE_NAME_1">%2$s</xliff:g>]ৰ সৈতে সংযোগ কৰা নাই।"</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"সংযোগ নকৰিব"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"সংযোগ কৰক"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"TARE ছেটিং"</string>
-    <string name="tare_on" msgid="2386073225978684535">"অন আছে"</string>
-    <string name="tare_off" msgid="6305694402929756726">"অফ আছে"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"ছেটিং ডিফ’ল্ট অৱস্থালৈ নিয়ক"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"ছেটিং ডিফ’ল্ট অৱস্থালৈ নিয়া হ’ল।"</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"ডিভাইচ সম্পূৰ্ণ চাৰ্জ হ’লে থকা সৰ্বাধিক বেলেঞ্চ"</string>
-    <string name="tare_balances" msgid="731881382594747961">"বেলেঞ্চ"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"খৰচ কৰাৰ সীমা"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"খৰচ কৰাৰ প্ৰাৰম্ভিক সীমা"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"খৰচৰ ন্যূনতম সীমা"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"খৰচ কৰাৰ সৰ্বাধিক সীমা"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"সংশোধক"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"কাৰ্য (উৎপাদন খৰচ)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"কাৰ্য (আধাৰ মূল্য)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"প্ৰতিটো একক অনুষ্ঠান অনুসৰি পুৰস্কাৰ"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"অনুষ্ঠানৰ সময়ৰ প্ৰতি ছেকেণ্ডৰ পুৰস্কাৰ"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"প্ৰতিদিনে সৰ্বাধিক পুৰস্কাৰ"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"এপ্ ইনষ্টল কৰা"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"শীৰ্ষ কাৰ্যকলাপ"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"জাননী চোৱা"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"১৫ মিনিটৰ ভিতৰত চোৱা জাননী"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"জাননী ব্যৱহাৰ কৰা"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"ৱিজেট ব্যৱহাৰ কৰা"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"ব্যৱহাৰকাৰীয়ে অন্য ধৰণে এপ্‌ ব্যৱহাৰ কৰা"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"সৰ্বোচ্চ অগ্ৰাধিকাৰপ্ৰাপ্ত কাম আৰম্ভ কৰা"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"সৰ্বোচ্চ অগ্ৰাধিকাৰপ্ৰাপ্ত কাম চলি থকা"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"উচ্চ অগ্ৰাধিকাৰপ্ৰাপ্ত কাম আৰম্ভ কৰা"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"উচ্চ অগ্ৰাধিকাৰপ্ৰাপ্ত কাম চলি থকা"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"ডিফ’ল্ট হিচাপে কাম আৰম্ভ কৰা"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"ডিফ’ল্ট হিচাপে কাম চলি থকা"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"কম অগ্ৰাধিকাৰপ্ৰাপ্ত কাম আৰম্ভ কৰা"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"কম অগ্ৰাধিকাৰপ্ৰাপ্ত কাম চলি থকা"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"সৰ্বনিম্ন অগ্ৰাধিকাৰপ্ৰাপ্ত কাম আৰম্ভ কৰা"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"সৰ্বনিম্ন অগ্ৰাধিকাৰপ্ৰাপ্ত কাম চলি থকা"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"কামৰ সময় উকলাৰ জৰিমনা"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"বেটাৰী সম্পূৰ্ণ চাৰ্জ হোৱাৰ অৱস্থাত থকা ন্যূনতম বেলেঞ্চ (ৰেহাই দিয়া হৈছে)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"বেটাৰী সম্পূৰ্ণ চাৰ্জ হোৱাৰ অৱস্থাত থকা ন্যূনতম বেলেঞ্চ (কাৰ্যকলাপহীন ছিষ্টেম এপ্)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"বেটাৰী সম্পূৰ্ণ চাৰ্জ হোৱাৰ অৱস্থাত থকা ন্যূনতম বেলেঞ্চ (বাকী থকা এপ্)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"বেটাৰী সম্পূৰ্ণ চাৰ্জ হোৱাৰ অৱস্থাত থকা ন্যূনতম বেলেঞ্চ (এপ্ আপডে’ট কৰোঁতা)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"চাৰ্জ হৈ আছে"</item>
-    <item msgid="658627268149681677">"ড’জ"</item>
-    <item msgid="1599558140284643834">"পাৱাৰ সঞ্চয়কাৰী ম’ড"</item>
-    <item msgid="588427840913221601">"প্ৰক্ৰিয়াৰ স্থিতি"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"নিশ্চিত কৰক"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"পূৰ্বদৰ্শন কৰক"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"কোনো স্ক্ৰীন ছেভাৰ বাছনি কৰক"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"অতিৰিক্ত তথ্য দেখুৱাওক"</string>
@@ -5398,6 +5365,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"অডিঅ’ শ্বেয়াৰ বন্ধ কৰা হৈছে"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"এটা সুসংগত ডিভাইচ সংযোগ কৰক"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"অডিঅ’ শ্বেয়াৰ কৰা আৰম্ভ কৰিবলৈ, প্ৰথমে LE অডিঅ’ হেডফ’নসমূহ আপোনাৰ ফ’নত সংযোগ কৰক"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"এটা LE অডিঅ’ ষ্ট্ৰীমৰ সৈতে সংযোগ কৰক"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"নিকটৱৰ্তী অডিঅ’ ষ্ট্ৰীম"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"অডিঅ’ ষ্ট্ৰীম"</string>
@@ -5442,5 +5411,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>ৰ জৰিয়তে শুনিবলৈ অডিঅ’ ষ্ট্ৰীমৰ কিউআৰ ক’ড এটা স্কেন কৰক"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"শ্বেয়াৰ কৰি থকা সময়ত পাছৱৰ্ড সম্পাদনা কৰিব নোৱাৰি। পাছৱৰ্ডটো সলনি কৰিবলৈ, প্ৰথমে অডিঅ’ শ্বেয়াৰিং অফ কৰক।"</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"কিউআৰ ক’ড স্কেনাৰ"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"সন্ধানৰ ছেটিংসমূহ"</string>
 </resources>
