--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Προστέθηκε το πρόσωπο και το <xliff:g id="WATCH">%s</xliff:g>"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Προστέθηκαν πρόσωπο, δακτυλικό αποτύπωμα και το <xliff:g id="WATCH">%s</xliff:g>"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Προστέθηκαν πρόσωπο, δακτυλικά αποτυπώματα και το <xliff:g id="WATCH">%s</xliff:g>"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Ο Έλεγχος ταυτότητας είναι ενεργός και απαιτεί βιομετρικά στοιχεία"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Απομ. ξεκλ. Προγράμ. ελέγχου ταυτότητας"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Το ρολόι προστέθηκε"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Ρυθμίστε το ρολόι σας"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Ρυθμίσεις πληκτρολογίου"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Περισσότερες ρυθμίσεις"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Ενημερώσεις υλικολογισμικού, πληροφορίες και άλλα"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"Συμβουλές και υποστήριξη"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Διεύθυνση Bluetooth συσκευής: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Διεύθυνση Bluetooth συσκευής:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Κατάργηση απομνημόνευσης συσκευής;"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Επαναφορά"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Επιλέξτε πλήκτρο τροποποίησης"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Επιλέξτε ένα νέο κλειδί για <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Διάταξη <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Προεπιλογή"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Αυτόματο: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Σύνθετες"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Το κουμπί Προσβασιμότητας έχει οριστεί σε <xliff:g id="SERVICE">%1$s</xliff:g>. Για να χρησιμοποιήσετε τη μεγέθυνση, αγγίξτε παρατεταμένα το κουμπί Προσβασιμότητας και έπειτα επιλέξτε να κάνετε μεγέθυνση."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Η κίνηση προσβασιμότητας ορίστηκε στην υπηρεσία <xliff:g id="SERVICE">%1$s</xliff:g>. Για να χρησιμοποιήσετε τη μεγιστοποίηση, σύρετε παρατεταμένα προς τα επάνω με δύο δάχτυλα από το κάτω μέρος της οθόνης και μην τα απομακρύνετε από την οθόνη. Στη συνέχεια, επιλέξτε μεγιστοποίηση."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Συντόμευση κουμπιού έντασης ήχου"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Ρυθμίσεις συντόμευσης"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"Συντόμευση από οθόνη κλειδώματος"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Να επιτρέπεται η ενεργοποίηση της συντόμευσης λειτουργιών από την οθόνη κλειδώματος. Πατήστε παρατεταμένα ταυτόχρονα τα πλήκτρα έντασης ήχου για μερικά δευτερόλεπτα."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Κουμπί προσβασιμότητας"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Κουμπί και κίνηση προσβασιμότητας"</string>
@@ -3347,7 +3351,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Ανενεργό"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Κανένα}=1{Ορίστηκε ένα πρόγραμμα.}other{Ορίστηκαν # προγράμματα.}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Μην ενοχλείτε"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"Λειτουργίες προτεραιότητας"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"Ελαχιστοποιήστε τους αντιπερισπασμούς και συγκεντρωθείτε με λειτουργίες ύπνου, εργασίας, οδήγησης και άλλα."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"Δημιουργήστε μια δική σας λειτουργία"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Λήψη ειδοποιήσεων μόνο από σημαντικά άτομα και εφαρμογές"</string>
@@ -3642,9 +3647,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Μπορεί να απαντήσει σε μηνύματα και να εκτελέσει ενέργειες σε κουμπιά ειδοποιήσεων, όπως να θέσει σε αναβολή ή να παραβλέψει ειδοποιήσεις και να απαντήσει σε κλήσεις."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Αλλαγή ρυθμίσεων"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Μπορεί να ενεργοποιήσει ή να απενεργοποιήσει τη λειτουργία Μην ενοχλείτε και να αλλάξει σχετικές ρυθμίσεις."</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Μπορεί να διαχειρίζεται και να ενεργοποιεί τις λειτουργίες προτεραιότητας, καθώς και να αλλάζει σχετικές ρυθμίσεις."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Εάν απενεργοποιήσετε την πρόσβαση σε ειδοποιήσεις για το <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, ενδεχομένως να απενεργοποιηθεί και η πρόσβασή του στη λειτουργία \"Μην ενοχλείτε\"."</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Εάν απενεργοποιήσετε την πρόσβαση στις ειδοποιήσεις για την εφαρμογή <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, ενδέχεται να απενεργοποιηθεί και η πρόσβαση στις λειτουργίες προτεραιότητας."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Απενεργοποίηση"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Ακύρωση"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Σε πραγματικό χρόνο"</string>
@@ -3705,9 +3712,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Πρόσβαση \"Μην ενοχλείτε\""</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Ενεργοποίηση λειτουργίας Μην ενοχλείτε"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Δεν ζητήθηκε πρόσβαση στη λειτουργία \"Μην ενοχλείτε\" από εγκατεστημένες εφαρμογές"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Πρόσβαση στις Λειτουργίες προτεραιότητας"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Να επιτρέπεται η πρόσβαση στις λειτουργίες προτεραιότητας"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Δεν έχει ζητηθεί πρόσβαση στις λειτουργίες προτεραιότητας από κάποια εγκατεστημένη εφαρμογή"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Δεν έχετε επιτρέψει τις ειδοποιήσεις από αυτή την εφαρμογή"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Μετά από αίτημά σας, το Android αποκλείει την εμφάνιση ειδοποιήσεων αυτής της κατηγορίας σε αυτή τη συσκευή"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Μετά από αίτημά σας, το Android αποκλείει την εμφάνιση ειδοποιήσεων αυτής της ομάδας σε αυτή τη συσκευή"</string>
@@ -4098,9 +4108,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Πρέπει να παραμείνει ενεργοποιημένη γιατί η πρόσβαση σε ειδοποιήσεις είναι ενεργοποιημένη"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Να γίνει ανάκληση της πρόσβασης στη λειτουργία \"Μην ενοχλείτε\" για την εφαρμογή <xliff:g id="APP">%1$s</xliff:g>;"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Όλοι οι κανόνες της λειτουργίας \"Μην ενοχλείτε\" που δημιουργήθηκαν από αυτή την εφαρμογή θα καταργηθούν."</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Να επιτρέπεται η πρόσβαση στις λειτουργίες προτεραιότητας για την εφαρμογή <xliff:g id="APP">%1$s</xliff:g>;"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Η εφαρμογή θα είναι σε θέση να ενεργοποιεί/απενεργοποιεί τη λειτουργία Μην ενοχλείτε, να διαχειρίζεται και να ενεργοποιεί τις λειτουργίες προτεραιότητας και να αλλάζει σχετικές ρυθμίσεις."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Να ανακληθεί η πρόσβαση στις λειτουργίες προτεραιότητας για την εφαρμογή <xliff:g id="APP">%1$s</xliff:g>;"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Όλες οι λειτουργίες που δημιουργήθηκαν από αυτή την εφαρμογή θα καταργηθούν."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Να μη γίνει βελτιστοποίηση"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Βελτιστοποίηση"</string>
@@ -5151,52 +5164,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"Η συσκευή <xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> θέλει να συνδεθεί σε αυτό το τηλέφωνο.\n\nΔεν έχετε συνδεθεί στο παρελθόν στη συσκευή <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g>."</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"Να μην γίνει σύνδεση"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"Σύνδεση"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"Ρυθμίσεις TARE"</string>
-    <string name="tare_on" msgid="2386073225978684535">"Ενεργό"</string>
-    <string name="tare_off" msgid="6305694402929756726">"Ανενεργό"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"Επαναφορά στις προεπιλεγμένες ρυθμίσεις"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"Έγινε επαναφορά στις προεπιλ. ρυθμίσεις."</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"Μέγιστη ισορροπία πλήρους φόρτισης"</string>
-    <string name="tare_balances" msgid="731881382594747961">"Υπόλοιπο"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"Όρια κατανάλωσης"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Όριο αρχικής κατανάλωσης"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Όριο ελάχιστης κατανάλωσης"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Όριο μέγιστης κατανάλωσης"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"Μεταβλητές"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"Ενέργειες (Κόστος παραγωγής)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"Ενέργειες (Βασική τιμή)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Επιβραβεύσεις ανά μεμονωμένο συμβάν"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Επιβραβεύσεις/δευτ. διάρκειας συμβάντος"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"Μέγιστος αριθμός επιβραβεύσεων ανά ημέρα"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"Εγκατάσταση εφαρμογής"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"Κορυφαία δραστηριότητα"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"Η ειδοποίηση προβλήθηκε"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Η ειδοποίηση προβλήθηκε εντός 15 λεπτών"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"Αλληλεπίδραση ειδοποίησης"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"Αλληλεπίδραση με γραφικό στοιχείο"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"Άλλη αλληλεπίδραση χρήστη"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"Έναρξη εργασίας ύψιστης προτεραιότητας"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"Εκτέλεση εργασίας ύψιστης προτεραιότητας"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"Έναρξη εργασίας υψηλής προτεραιότητας"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"Εκτέλεση εργασίας υψηλής προτεραιότητας"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"Έναρξη εργασίας προεπιλεγμένης προτερ."</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"Εκτέλεση εργασίας προεπιλεγμένης προτερ."</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"Έναρξη εργασίας χαμηλής προτεραιότητας"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"Εκτέλεση εργασίας χαμηλής προτεραιότητας"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"Έναρξη εργασίας χαμηλότερης προτεραιότ."</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"Εκτέλεση εργασίας χαμηλότ. προτεραιότ."</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"Ποινή χρονικού ορίου εργασίας"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Ελάχιστο υπόλοιπο πλήρους φόρτισης (εξαιρούμενη)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Ελάχιστο υπόλοιπο πλήρους φόρτισης (headless εφαρμογή συστήματος)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Ελάχιστο υπόλοιπο πλήρους φόρτισης (εναπομείνασες εφαρμογές)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Προσθήκη ελάχιστου υπόλοιπου πλήρους φόρτισης (προγράμματα ενημέρωσης εφαρμογών)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"Φόρτιση"</item>
-    <item msgid="658627268149681677">"Υπνάκος"</item>
-    <item msgid="1599558140284643834">"Λειτουργία εξοικονόμησης ενέργειας"</item>
-    <item msgid="588427840913221601">"Κατάσταση επεξεργασίας"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Επιβεβαίωση"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Προεπισκόπηση"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Επιλογή προφύλαξης οθόνης"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Εμφάνιση πρόσθετων πληροφοριών"</string>
@@ -5398,6 +5365,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Η κοινή χρήση ήχου διακόπηκε"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Σύνδεση συμβατής συσκευής"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Για να ξεκινήσετε την κοινή χρήση ήχου, συνδέστε πρώτα ακουστικά LE Audio στο τηλέφωνό σας"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"Σύνδεση σε ροή LE Audio"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Ροές ήχου σε κοντινή απόσταση"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Ροές ήχου"</string>
@@ -5442,5 +5411,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Σαρώστε τον κωδικό QR μιας ροής ήχου για να ακούσετε με τη συσκευή <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Δεν είναι δυνατή η επεξεργασία του κωδικού πρόσβασης κατά την κοινή χρήση. Για να αλλάξετε τον κωδικό πρόσβασης, αρχικά, απενεργοποιήστε την κοινή χρήση ήχου."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Σάρωση κωδικών QR"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"Ρυθμίσεις αναζήτησης"</string>
 </resources>
