--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Nägu ja kell <xliff:g id="WATCH">%s</xliff:g> on lisatud"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Nägu, sõrmejälg ja kell <xliff:g id="WATCH">%s</xliff:g> on lisatud"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Nägu, sõrmejäljed ja kell <xliff:g id="WATCH">%s</xliff:g> on lisatud"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Identsuskontroll on sisse lülitatud ja vajab biomeetrilisi andmeid"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Kaugautentija avamine"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Kell on lisatud"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Kella seadistamine"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Klaviatuuriseaded"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Rohkem seadeid"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Püsivaravärskendused, teave ja muu"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"Nõuanded ja tugi"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Seadme Bluetoothi aadress: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Seadme Bluetoothi aadress:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Kas unustada seade?"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Lähtesta"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Muuteklahvi valimine"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Valige muuteklahvi <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> jaoks uus klahv:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Paigutus: <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Vaikeseade"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automaatne: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Täpsemad"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Juurdepääsetavuse nupu jaoks on valitud seade <xliff:g id="SERVICE">%1$s</xliff:g>. Suurenduse kasutamiseks puudutage ja hoidke juurdepääsetavuse nuppu ning seejärel valige suurendus."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"See juurdepääsetavuse liigutus on määratud teenusele <xliff:g id="SERVICE">%1$s</xliff:g>. Suurenduse kasutamiseks pühkige kahe sõrmega ekraanikuva allosast üles ja hoidke sõrmi ekraanil. Seejärel tehke valik Suurendus."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Helitugevuse nupu otsetee"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Otsetee seaded"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"Otsetee lukustuskuval"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Lukustuskuval sisselülitamiseks lubage funktsiooni otsetee. Hoidke mõlemat helitugevuse klahvi mõni sekund all."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Juurdepääsetavuse nupp"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Juurdepääsetavuse nupp ja liigutus"</string>
@@ -3347,7 +3351,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Väljas"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Puudub}=1{1 ajakava on määratud}other{# ajakava on määratud}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Mitte segada"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"Prioriteetsed režiimid"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"Minimeerige segajad ning juhtige oma tähelepanu une-, töö-, sõidu- ja kõigi teiste režiimide abil."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"Omaenda režiimi loomine"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Ainult oluliste inimeste ja rakendustega seotud märguanded"</string>
@@ -3642,9 +3647,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"See saab vastata sõnumitele ja aktiveerida märguannetes olevaid toimingunuppe, sealhulgas märguandeid edasi lükata või nendest loobuda ja kõnedele vastata."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Seadete muutmine"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"See saab funktsiooni Mitte segada sisse või välja lülitada ja muuta seotud seadeid."</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"See saab hallata ja aktiveerida prioriteetseid režiime ning muuta nendega seotud seadeid."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Kui lülitate teenuse <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> jaoks juurdepääsu märguannetele välja, võidakse välja lülitada ka juurdepääs funktsioonile Mitte segada."</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Kui lülitate teenuse <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> jaoks juurdepääsu märguannetele välja, võidakse välja lülitada ka juurdepääs prioriteetsetele režiimidele."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Lülita välja"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Tühista"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Reaalajas"</string>
@@ -3705,9 +3712,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Juurdepääs funktsioonile Mitte segada"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Luba funktsioon Mitte segada"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Ükski installitud rakendus pole palunud juurdepääsu funktsioonile Mitte segada"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Juurdepääs prioriteetsetele režiimidele"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Luba juurdepääs prioriteetsetele režiimidele"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Ükski installitud rakendus pole taotlenud juurdepääsu prioriteetsetele režiimidele"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Te pole selle rakenduse märguandeid lubanud"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Teie taotluse kohaselt blokeerib Android selle märguandekategooria kuvamise selles seadmes"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Teie taotluse kohaselt blokeerib Android selle märguandegrupi kuvamise selles seadmes"</string>
@@ -4098,9 +4108,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Peab jääma sisselülitatud asendisse, kuna juurdepääs märguannetele on sisse lülitatud"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Kas tühistada rakenduse <xliff:g id="APP">%1$s</xliff:g> juurdepääs režiimile Mitte segada?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Kõik selle rakenduse loodud režiimi Mitte segada reeglid eemaldatakse."</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Kas lubada rakendusel <xliff:g id="APP">%1$s</xliff:g> juurde pääseda prioriteetsetele režiimidele?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Rakendus saab funktsiooni Mitte segada sisse/välja lülitada, prioriteetseid režiime hallata ja aktiveerida ning muuta nendega seotud seadeid."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Kas tühistada rakenduse <xliff:g id="APP">%1$s</xliff:g> juurdepääs prioriteetsetele režiimidele?"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Kõik selle rakenduse loodud režiimid eemaldatakse."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Ära optimeeri"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimeeri"</string>
@@ -5151,52 +5164,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> soovib selle telefoniga ühendust luua.\n\nTe pole seadmega <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> varem ühendust loonud."</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"Ära ühenda"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"Ühenda"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"TARE seaded"</string>
-    <string name="tare_on" msgid="2386073225978684535">"Sees"</string>
-    <string name="tare_off" msgid="6305694402929756726">"Väljas"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"Taasta vaikeseaded"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"Taastati vaikeseaded."</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"Max täislaetud aku saldo"</string>
-    <string name="tare_balances" msgid="731881382594747961">"Saldod"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"Tarbimispiirangud"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Esialgne tarbimispiirang"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Minimaalne tarbimispiirang"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Maksimaalne tarbimispiirang"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"Muutujad"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"Toimingud (tegemise hind)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"Toimingud (baashind)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Preemiaid ühe sündmuse kohta"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Preemiaid sekundis sündmuse jooksul"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"Maksimaalne preemiate arv päevas"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"Rakenduse installimine"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"Tipptegevus"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"Märguannet vaadati"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Märguannet vaadati 15 minuti jooksul"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"Märguande interaktsioon"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"Vidina interaktsioon"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"Muu kasutaja interaktsioon"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"Max prioriteediga töö käivitamine"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"Max prioriteediga töö käitamine"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"Kõrge prioriteediga töö käivitamine"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"Kõrge prioriteediga töö käitamine"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"Vaikeprioriteediga töö käivitamine"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"Vaikeprioriteediga töö käitamine"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"Madala prioriteediga töö käivitamine"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"Madala prioriteediga töö käitamine"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"Min prioriteediga töö käivitamine"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"Min prioriteediga töö käitamine"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"Töö ajalõpu karistus"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimaalne täislaetud aku saldo (välistatud)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimaalne täislaetud aku saldo (kasutajaliideseta süsteemirakendus)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimaalne täislaetud aku saldo (ülejäänud rakendused)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Minimaalne täislaetud aku saldo lisa (rakenduse värskendajad)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"Laadimine"</item>
-    <item msgid="658627268149681677">"Uinumine"</item>
-    <item msgid="1599558140284643834">"Energiasäästurežiim"</item>
-    <item msgid="588427840913221601">"Protsessi olek"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Kinnita"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Eelvaade"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Valige ekraanisäästja"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Kuva lisateave"</string>
@@ -5398,6 +5365,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Heli jagamine on lõpetatud"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Ühilduva seadme ühendamine"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Heli jagamise alustamiseks ühendage esmalt LE Audio kõrvaklapid oma telefoniga"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"LE Audio vooga ühendamine"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Läheduses asuvad helivood"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Helivood"</string>
@@ -5442,5 +5411,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Seadmega <xliff:g id="DEVICE_NAME">%1$s</xliff:g> kuulamiseks skannige helivoo QR-kood"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Parooli ei saa jagamise ajal muuta. Parooli muutmiseks lülitage esmalt heli jagamine välja."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR-koodi skanner"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"Otsinguseaded"</string>
 </resources>
