--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Kasvot ja <xliff:g id="WATCH">%s</xliff:g> lisätty"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Kasvot, sormenjälki ja <xliff:g id="WATCH">%s</xliff:g> lisätty"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Kasvot, sormenjäljet ja <xliff:g id="WATCH">%s</xliff:g> lisätty"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Henkilöllisyyden tunnistaminen on päällä ja edellyttää biometristä tunnistetta"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticatorin lukituksen avaus"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Kello lisätty"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Kellon käyttöönotto"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Näppäimistön asetukset"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Lisää asetuksia"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Laiteohjelmistopäivitykset, tietoja ja muuta"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"Vinkit ja tuki"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Laitteen Bluetooth-osoite: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Laitteen Bluetooth-osoite: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Unohdetaanko laite?"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Palauta"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Valitse muokkausnäppäin"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Valitse uusi näppäin (<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>):"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Asettelu: <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Oletus"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automaattinen: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Lisäasetukset"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Esteettömyys-painikkeen toiminnoksi on valittu <xliff:g id="SERVICE">%1$s</xliff:g>. Jos haluat käyttää suurennusta, kosketa Esteettömyys-painiketta pitkään ja valitse suurennus."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Esteettömyyseleen asetus on <xliff:g id="SERVICE">%1$s</xliff:g>. Jos haluat käyttää suurennusta, pyyhkäise kahdella sormella ylös näytön alalaidasta ja paina pitkään. Valitse sitten suurennus."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Pikakomento: äänenvoimakkuuspainike"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Pikanäppäinasetukset"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"Pikakuvake lukitusnäytöllä"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Salli ominaisuuden päälle laittaminen lukitusnäytön pikakuvakkeella. Paina molempia äänenvoimakkuuspainikkeita muutaman sekunnin ajan."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Saavutettavuuspainike"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Saavutettavuuspainike ja ‑ele"</string>
@@ -3347,7 +3351,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Pois päältä"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Ei yhtään}=1{1 aikataulu luotu}other{# aikataulua luotu}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Älä häiritse"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"Prioriteettitilat"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"Minimoi häiriötekijät ja paranna keskittymistäsi esimerkiksi uni-, työskentely- ja ajotiloilla."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"Luo oma tila"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Salli ilmoitukset vain tärkeiltä ihmisiltä ja sovelluksilta"</string>
@@ -3642,9 +3647,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Se voi vastata viesteihin ja käyttää ilmoitusten toimintoja, esim. torkuttaa tai hylätä ilmoituksia ja vastata puheluihin."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Asetusten muuttaminen"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Se voi laittaa Älä häiritse ‑tilan päälle tai pois päältä ja muuttaa siihen liittyviä asetuksia."</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Se voi ylläpitää ja aktivoida prioriteettitilat ja muuttaa niihin liittyviä asetuksia."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Jos <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> ei saa käyttää ilmoituksia, myös Älä häiritse ‑tilan käyttö voidaan estää."</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Jos <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> ei saa pääsyä ilmoituksiin, myös pääsy prioriteettitiloihin voidaan laittaa pois päältä."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Laita pois päältä"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Peru"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Reaaliaikainen"</string>
@@ -3705,9 +3712,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Älä häiritse -pääsy"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Salli Älä häiritse ‑tila"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Yksikään asennettu sovellus ei ole pyytänyt Älä häiritse -tilan käyttöoikeutta."</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Pääsy prioriteettitiloihin"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Salli pääsy prioriteettitiloihin"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Yksikään asennettu sovellus ei ole pyytänyt pääsyä prioriteettitiloihin"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Et ole sallinut ilmoituksia tästä sovelluksesta"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Android estää pyynnöstäsi tähän luokkaan kuuluvien ilmoituksien näyttämisen tällä laitteella"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Android estää pyynnöstäsi tähän ryhmään kuuluvien ilmoituksien näyttämisen tällä laitteella"</string>
@@ -4098,9 +4108,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Tämän täytyy olla käytössä, sillä ilmoitusten käyttöoikeus on myönnetty"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Perutaanko sovellukselta <xliff:g id="APP">%1$s</xliff:g> Älä häiritse -tilan käyttöoikeus?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Kaikki tämän sovelluksen luomat Älä häiritse -säännöt poistetaan."</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Saako <xliff:g id="APP">%1$s</xliff:g> pääsyn prioriteettitiloihin?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Sovellus voi laittaa Älä häiritse ‑tilan päälle tai pois päältä, ylläpitää ja aktivoida prioriteettitiloja ja tehdä muutoksia niihin liittyviin asetuksiin."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Perutaanko pääsy prioriteettitiloihin (<xliff:g id="APP">%1$s</xliff:g>)?"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Kaikki tämän sovelluksen luomat tilat poistetaan."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Älä optimoi"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimoi"</string>
@@ -5151,52 +5164,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> haluaa yhdistää tähän puhelimeen.\n\n<xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> ei ole ennen muodostanut yhteyttä."</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"Älä yhdistä"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"Yhdistä"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"TAREn asetukset"</string>
-    <string name="tare_on" msgid="2386073225978684535">"Päällä"</string>
-    <string name="tare_off" msgid="6305694402929756726">"Poissa päältä"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"Palautetaanko oletusasetukset?"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"Oletusasetukset palautettiin."</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"Enimmäistasapaino, kun laite on ladattu"</string>
-    <string name="tare_balances" msgid="731881382594747961">"Saldot"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"Kulutusrajat"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Kulutuksen alkuraja"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Kulutuksen vähimmäisraja"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Kulutuksen enimmäisraja"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"Muuttujat"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"Toiminnot (tuotannon hinta)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"Toiminnot (perushinta)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Palkinnot yhtä tapahtumaa kohden"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Palkintoja sekunnissa tapahtuman aikana"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"Enimmäispalkinnot päivää kohden"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"Sovellusasennus"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"Tärkein toiminta"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"Ilmoitus nähty"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Ilmoitus nähty 15 min sisällä"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"Ilmoitustoiminto"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"Widget-toiminto"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"Muu käyttäjätoiminto"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"Aloita enimmäistason työ"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"Enimmäistason työ käynnissä"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"Aloita korkean tason työ"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"Korkean tason työ käynnissä"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"Aloita vakiotason työ"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"Vakiotason työ käynnissä"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"Aloita matalan tason työ"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"Matalan tason työ käynnissä"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"Aloita vähimmäistason työ"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"Vähimmäistason työ käynnissä"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"Työn aikarajoitusrangaistus"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Vähimmäissaldo, kun laite on ladattu (Vapautettu)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Enimmäissaldo, kun laite on ladattu (Järjestelmäsovellus ilman UI-grafiikkaa)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Vähimmäissaldo, kun laite on ladattu (Jäljellä olevat sovellukset)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Enimmäissaldo, kun laite on ladattu (Sovelluksen päivittäjät)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"Ladataan"</item>
-    <item msgid="658627268149681677">"Unitila"</item>
-    <item msgid="1599558140284643834">"Virransäästötila"</item>
-    <item msgid="588427840913221601">"Käsittelytila"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Vahvista"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Esikatsele"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Valitse näytönsäästäjä"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Näytä lisätietoja"</string>
@@ -5398,6 +5365,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Audion jakaminen on lopetettu"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Yhdistä yhteensopiva laite"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Jos haluat jakaa audiota, yhdistä ensin LE Audio ‑kuulokkeet puhelimeen"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"Yhdistä LE Audio ‑striimiin"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Lähellä olevat audiostriimit"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Audiostriimit"</string>
@@ -5442,5 +5411,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Skannaa QR-koodi, niin <xliff:g id="DEVICE_NAME">%1$s</xliff:g> voi toistaa audiostriimiä"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Salasanaa ei voi muokata jakamisen aikana. Jos haluat vaihtaa salasanaa, laita ensin audionjako pois päältä."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR-koodiskanneri"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"Hae asetuksia"</string>
 </resources>
