--- a/res/values-fr-rCA-neuter/strings.xml
+++ b/res/values-fr-rCA-neuter/strings.xml
@@ -16,6 +16,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="show_dev_countdown" msgid="2936506773086395069">"{count,plural, =1{Plus que # étape pour être développeur ou développeuse.}one{Plus que # étape pour être développeur ou développeuse.}other{Plus que # étapes pour être développeur ou développeuse.}}"</string>
     <string name="show_dev_on" msgid="2840850085134853754">"Vous êtes maintenant développeur·euse!"</string>
     <string name="show_dev_already" msgid="7041756429707644630">"Inutile, vous êtes déjà un développeur·euse."</string>
     <string name="wifi_settings_wep_networks_disconnect_summary" msgid="6894496037087903635">"Vous êtes connecté·e à un réseau WEP. Si vous arrêtez d\'autoriser ces réseaux, vous serez déconnecté·e."</string>
