--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Andliti og <xliff:g id="WATCH">%s</xliff:g> bætt við"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Andliti, fingrafari og <xliff:g id="WATCH">%s</xliff:g> bætt við"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Andliti, fingraförum og <xliff:g id="WATCH">%s</xliff:g> bætt við"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Kveikt er á auðkennisathugun sem krefst lífkenna"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Taka úr lás með Remote Authenticator"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Úri bætt við"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Setja upp úr"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Stillingar lyklaborðs"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Fleiri stillingar"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Fastbúnaðaruppfærslur, upplýsingar og fleira"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"Ábendingar og aðstoð"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Bluetooth-vistfang tækis: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Bluetooth-vistfang tækis:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Gleyma tæki?"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Endurstilla"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Velja breytilykil"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Veldu nýjan lykil fyrir <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Útlit: <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Sjálfgefið"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Sjálfvirkt: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Ítarlegt"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Aðgengishnappurinn er stilltur á <xliff:g id="SERVICE">%1$s</xliff:g>. Til að nota stækkun skaltu halda aðgengishnappnum inni og velja stækkun."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Aðgengisbending er stillt á <xliff:g id="SERVICE">%1$s</xliff:g>. Til að nota stækkun skaltu strjúka upp með tveimur fingrum frá neðri hluta skjásins og halda inni. Síðan skaltu velja stækkun."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Flýtileið með hljóðstyrkstakka"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Stillingar flýtileiðar"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"Flýtileið af lásskjá"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Leyfa flýtileið að kveikja á eiginleika af lásskjá. Haltu báðum hljóðstyrkstökkunum inni í nokkrar sekúndur."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Aðgengishnappur"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Aðgengishnappur og bending"</string>
@@ -3347,7 +3351,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Slökkt"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Engin}=1{1 áætlun stillt}one{# áætlun stillt}other{# áætlanir stilltar}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Ónáðið ekki"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"Forgangsstillingar"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"Lágmarkaðu truflanir og stjórnaðu því sem vekur athygli þína með stillingum fyrir svefn, vinnu, akstur og allt þar á milli."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"Búðu til þína eigin stillingu"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Fáðu aðeins tilkynningar frá mikilvægum einstaklingum og forritum"</string>
@@ -3642,9 +3647,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Það getur svarað skilaboðum og framkvæmt aðgerðir á hnöppum tilkynninga, þar á meðal að blunda eða hunsa tilkynningar og svara símtölum."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Breytt stillingum"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Það getur kveikt eða slökkt á „Ónáðið ekki“ og breytt tengdum stillingum."</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Getur stjórnað og virkjað forgangsstillingar og breytt tengdum stillingum."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Ef þú slekkur á tilkynningaaðgangi fyrir <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> kann einnig að verða slökkt á Ónáðið ekki."</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Ef þú slekkur á tilkynningaaðgangi fyrir <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> verður hugsanlega ekki slökkt á aðgangi að forgangsstillingum."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Slökkva"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Hætta við"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Rauntími"</string>
@@ -3705,9 +3712,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"„Ónáðið ekki“ aðgangur"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Leyfa aðgang að „Ónáðið ekki“"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Engin uppsett forrit hafa óskað eftir „Ónáðið ekki“ aðgangi"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Aðgangur að forgangsstillingum"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Leyfa aðgang að forgangsstillingum"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Engin uppsett forrit hafa óskað eftir aðgangi að forgangsstillingum"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Þú hefur ekki leyft tilkynningar frá þessu forriti"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Android kemur í veg fyrir að þessi tilkynningaflokkur birtist í þessu tæki, samkvæmt beiðni frá þér"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Android kemur í veg fyrir að þessi tilkynningahópur birtist í þessu tæki, samkvæmt beiðni frá þér"</string>
@@ -4098,9 +4108,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Verður að vera kveikt vegna þess að kveikt er á tilkynningaaðgangi"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Afturkalla aðgang að „Ónáðið ekki“ fyrir <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Allar reglur um „Ónáðið ekki“ sem búnar voru til af þessu forriti verða fjarlægðar."</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Veita <xliff:g id="APP">%1$s</xliff:g> aðgang að forgangsstillingum?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Forritið getur kveikt/slökkt á „Ónáðið ekki“, stjórnað og virkjað forgangsstillingar og breytt tengdum stillingum."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Afturkalla aðgang <xliff:g id="APP">%1$s</xliff:g> að forgangsstillingum?"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Allar stillingar sem þetta forrit hefur búið til verða fjarlægðar."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Ekki spara"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Spara"</string>
@@ -5151,52 +5164,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> vill tengjast þessum síma.\n\nÞú hefur ekki tengst <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> áður."</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"Ekki tengjast"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"Tengjast"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"TARE stillingar"</string>
-    <string name="tare_on" msgid="2386073225978684535">"Kveikt"</string>
-    <string name="tare_off" msgid="6305694402929756726">"Slökkt"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"Skipta aftur í sjálfgefnar stillingar"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"Skipt var yfir í sjálfgefnar stillingar."</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"Hámarksjafnvægi við fulla hleðslu"</string>
-    <string name="tare_balances" msgid="731881382594747961">"Stöður"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"Notkunartakmarkanir"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Upprunalegar notkunartakmarkanir"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Lágmarksnotkun"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Hámarksnotkun"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"Breytilyklar"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"Aðgerðir (framleiðslukostnaður)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"Aðgerðir (grunnverð)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Verðlaun fyrir einn viðburð"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Fríðindi á sekúndu í viðburði"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"Hámarksfjöldi verðlauna á dag"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"Uppsetning forrits"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"Mesta virkni"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"Tilkynning skoðuð"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Tilkynning skoðuð innan 15 mínútna"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"Viðbrögð við tilkynningu"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"Viðbrögð við græju"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"Önnur viðbrögð notanda"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"Ræsing á mjög mikilvægu verki"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"Keyrsla á mjög mikilvægu verki"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"Ræsing á mikilvægu verki"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"Keyrsla á mikilvægu verki"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"Sjálfvirk ræsing verks"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"Sjálfvirk keyrsla verks"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"Ræsing verks í litlum forgangi"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"Keyrsla verks í litlum forgangi"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"Ræsing verks í lágmarksforgangi"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"Keyrsla verks í lágmarksforgangi"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"Refsing fyrir verk sem rann út á tíma"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Lágmarksstaða við fulla hleðslu (undanþegin)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Lágmarksstaða við fulla hleðslu (kerfisforrit án notendaviðmóts)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Lágmarksstaða við fulla hleðslu (önnur forrit)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Viðbót lágmarksstöðu við fulla hleðslu (uppfærslur forrits)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"Í hleðslu"</item>
-    <item msgid="658627268149681677">"Blunda"</item>
-    <item msgid="1599558140284643834">"Orkusparnaðarstilling"</item>
-    <item msgid="588427840913221601">"Vinnslustaða"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Staðfesta"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Forskoða"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Velja skjávara"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Sýna viðbótarupplýsingar"</string>
@@ -5398,6 +5365,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Hljóðdeiling stöðvuð"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Tengdu samhæft tæki"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Til að byrja að deila hljóði skaltu fyrst tengja heyrnartól fyrir LE-hljóð við símann"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"Tengjast LE-hljóðstreymi"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Nálæg hljóðstreymi"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Hljóðstreymi"</string>
@@ -5442,5 +5411,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Skannaðu QR-kóða hljóðstreymis til að hlusta með <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Ekki hægt að breyta aðgangsorði á meðan deilt er. Til að breyta aðgangsorðinu skaltu fyrst slökkva á hljóðdeilingu."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR-kóðaskanni"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"Leitarstillingar"</string>
 </resources>
