--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"ເພີ່ມໃບໜ້າ ແລະ <xliff:g id="WATCH">%s</xliff:g> ແລ້ວ"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"ເພີ່ມໃບໜ້າ, ລາຍນິ້ວມື ແລະ <xliff:g id="WATCH">%s</xliff:g> ແລ້ວ"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"ເພີ່ມໃບໜ້າ, ລາຍນິ້ວມື ແລະ <xliff:g id="WATCH">%s</xliff:g> ແລ້ວ"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"ການກວດສອບຕົວຕົນເປີດຢູ່ ແລະ ຕ້ອງໃຊ້ຂໍ້ມູນລະບົບຊີວະມິຕິ"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"ການປົດລັອກ Authenticator ຈາກທາງໄກ"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"ເພີ່ມໂມງແລ້ວ"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"ຕັ້ງຄ່າໂມງຂອງທ່ານ"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"ການຕັ້ງຄ່າແປ້ນພິມ"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"ການຕັ້ງຄ່າເພີ່ມເຕີມ"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ການອັບເດດເຟີມແວ, ກ່ຽວກັບ ແລະ ອື່ນໆ"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"ເຄັດລັບ ແລະ ການຊ່ວຍເຫຼືອ"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ທີ່ຢູ່ Bluetooth ຂອງອຸປະກອນ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ທີ່ຢູ່ Bluetooth ຂອງອຸປະກອນ:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ລືມອຸປະກອນບໍ?"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"ຣີເຊັດ"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"ເລືອກປຸ່ມຕົວດັດແປງ"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"ເລືອກປຸ່ມໃໝ່ສຳລັບ <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"ໂຄງຮ່າງ <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ຄ່າເລີ່ມຕົ້ນ"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"ອັດຕະໂນມັດ: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"ຂັ້ນສູງ"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"ປຸ່ມການຊ່ວຍເຂົ້າເຖິງຖືກຕັ້ງເປັນ <xliff:g id="SERVICE">%1$s</xliff:g> ແລ້ວ. ເພື່ອໃຊ້ການຂະຫຍາຍ, ໃຫ້ແຕະປຸ່ມການຊ່ວຍເຂົ້າເຖິງຄ້າງໄວ້, ຈາກນັ້ນເລືອກການຂະຫຍາຍ."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"ຕັ້ງທ່າທາງການຊ່ວຍເຫຼືອເປັນ <xliff:g id="SERVICE">%1$s</xliff:g> ແລ້ວ. ເພື່ອໃຊ້ການຂະຫຍາຍ, ໃຫ້ປັດຂຶ້ນດ້ວຍສອງນິ້ວຈາກລຸ່ມສຸດຂອງໜ້າຈໍຄ້າງໄວ້. ຈາກນັ້ນເລືອກການຂະຫຍາຍ."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"ທາງລັດປຸ່ມລະດັບສຽງ"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"ການຕັ້ງຄ່າທາງລັດ"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"ທາງລັດຈາກໜ້າຈໍລັອກ"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"ອະນຸຍາດໃຫ້ເປີດໃຊ້ທາງລັດຄຸນສົມບັດໄດ້ຈາກໜ້າຈໍລັອກ. ກົດປຸ່ມລະດັບສຽງຄ້າງໄວ້ສອງສາມວິນາທີ."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"ປຸ່ມການຊ່ວຍເຂົ້າເຖິງ"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"ປຸ່ມການຊ່ວຍເຂົ້າເຖິງ ແລະ ທ່າທາງ"</string>
@@ -3347,7 +3351,7 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"ປິດ"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{ບໍ່ມີ}=1{ຕັ້ງກຳນົດເວລາ 1 ລາຍການແລ້ວ}other{ຕັ້ງກຳນົດເວລາ # ລາຍການແລ້ວ}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"ຫ້າມລົບກວນ"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"ໂໝດຄວາມສຳຄັນ"</string>
+    <string name="zen_modes_list_title" msgid="4796033710444068729">"ໂໝດ"</string>
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"ຫຼຸດສິ່ງລົບກວນ ແລະ ມີສະມາທິຢູ່ກັບສິ່ງທີ່ທ່ານສົນໃຈດ້ວຍໂໝດສຳລັບການນອນຫຼັບ, ການເຮັດວຽກ, ການຂັບຂີ່ ແລະ ອື່ນໆອີກຫຼາກຫຼາຍ."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"ສ້າງໂໝດຂອງທ່ານເອງ"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"ຮັບການແຈ້ງເຕືອນສະເພາະຄົນ ແລະ ແອັບສຳຄັນເທົ່ານັ້ນ"</string>
@@ -3642,9 +3646,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"ມັນສາມາດຕອບກັບຫາຂໍ້ຄວາມ ແລະ ໃຊ້ຄຳສັ່ງຢູ່ປຸ່ມຕ່າງໆໃນການແຈ້ງເຕືອນໄດ້, ຮວມທັງການເລື່ອນໄປກ່ອນ ຫຼື ການປິດການແຈ້ງເຕືອນ ແລະ ການຮັບສາຍໂທລະສັບ."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ປ່ຽນການຕັ້ງຄ່າ"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"ມັນສາມາດເປີດ ຫຼື ປິດໂໝດຫ້າມລົບກວນ ແລະ ປ່ຽນການຕັ້ງຄ່າທີ່ກ່ຽວຂ້ອງໄດ້."</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"ໂດຍສາມາດຈັດການ ແລະ ເປີດນຳໃຊ້ໂໝດຄວາມສຳຄັນ, ຮວມທັງປ່ຽນແປງການຕັ້ງຄ່າທີ່ກ່ຽວຂ້ອງໄດ້."</string>
+    <string name="nls_feature_modes_settings_summary" msgid="70022458305195595">"ໂດຍສາມາດຈັດການ ແລະ ເປີດນຳໃຊ້ໂໝດ, ຮວມທັງປ່ຽນແປງການຕັ້ງຄ່າທີ່ກ່ຽວຂ້ອງໄດ້."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"ຫາກທ່ານປິດການເຂົ້າເຖິງການແຈ້ງເຕືອນສຳລັບ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, ການເຂົ້າເຖິງ ຫ້າມລົບກວນ ອາດຖືກປິດໄປນຳ."</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"ຫາກທ່ານປິດການເຂົ້າເຖິງການແຈ້ງເຕືອນສຳລັບ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, ການເຂົ້າເຖິງໂໝດຄວາມສຳຄັນອາດຈະຖືກປິດໄປນຳ."</string>
+    <string name="notification_listener_disable_modes_warning_summary" msgid="7528432011433844158">"ຫາກທ່ານປິດການເຂົ້າເຖິງການແຈ້ງເຕືອນສຳລັບ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, ການເຂົ້າເຖິງໂໝດອາດຈະຖືກປິດໄປນຳ."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"ປິດໄວ້"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"ຍົກເລີກ"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ແບບສົດໆ"</string>
@@ -3705,9 +3709,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"​ການເຂົ້າເຖິງ ຫ້າມ​ລົບ​ກວນ"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"ອະນຸຍາດໂໝດຫ້າມລົບກວນ"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ບໍ່​ມີ​ການ​ຂໍ​ແອັບ​ທີ່​ຕິດ​ຕັ້ງ​ໄວ້ ​ຫາ​ຫ້າມ​ລົບ​ກວນການ​ເຂົ້າ"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"ສິດເຂົ້າເຖິງໂໝດຄວາມສຳຄັນ"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"ອະນຸຍາດໃຫ້ໂໝດຄວາມສຳຄັນເຂົ້າເຖິງ"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"ບໍ່ມີແອັບໃດທີ່ຕິດຕັ້ງໄວ້ຂໍເຂົ້າເຖິງໂໝດຄວາມສຳຄັນ"</string>
+    <string name="manage_zen_modes_access_title" msgid="2520680004915648824">"ການເຂົ້າເຖິງໂໝດ"</string>
+    <string name="zen_modes_access_detail_switch" msgid="4060429747631111299">"ອະນຸຍາດການເຂົ້າເຖິງໂໝດ"</string>
+    <string name="zen_modes_access_empty_text" msgid="8750927923904377110">"ບໍ່ມີແອັບໃດທີ່ຕິດຕັ້ງໄວ້ຂໍເຂົ້າເຖິງໂໝດ"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"ທ່ານບໍ່ໄດ້ອະນຸຍາດການແຈ້ງເຕືອນຈາກແອັບນີ້"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"ຕາມຄຳຂໍຂອງທ່ານ, Android ຈະບລັອກໝວດໝູ່ການແຈ້ງເຕືອນນີ້ບໍ່ໃຫ້ປາກົດຢູ່ອຸປະກອນນີ້"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"ຕາມຄຳຂໍຂອງທ່ານ, Android ຈະບລັອກກຸ່ມການແຈ້ງເຕືອນນີ້ບໍ່ໃຫ້ປາກົດຢູ່ອຸປະກອນນີ້"</string>
@@ -4098,9 +4102,9 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"ຕ້ອງເປີດໄວ້ເນື່ອງຈາກການເຂົ້າເຖິງການແຈ້ງເຕືອນຖືກເປີດໃຊ້"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"ຖອດຖອນ​ການ​ເຂົ້າ​ເຖິງຫ້າມ​ລົບ​ກວນສຳລັບ <xliff:g id="APP">%1$s</xliff:g> ບໍ?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ທຸກກົດ​ລະບຽບຫ້າມ​ລົບ​ກວນທີ່​ສ້າງ​ຂຶ້ນ​ໂດຍ​ແອັບນີ້​ຈະ​ຖືກລຶບ​ອອກ."</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"ອະນຸຍາດໃຫ້ເຂົ້າເຖິງໂໝດຄວາມສຳຄັນສຳລັບ <xliff:g id="APP">%1$s</xliff:g> ບໍ?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"ແອັບຈະສາມາດເປີດ/ປິດໂໝດຫ້າມລົບກວນ, ຈັດການ ແລະ ເປີດນຳໃຊ້ໂໝດຄວາມສຳຄັນ, ຮວມທັງປ່ຽນແປງການຕັ້ງຄ່າທີ່ກ່ຽວຂ້ອງໄດ້."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"ຖອດຖອນສິດເຂົ້າເຖິງໂໝດຄວາມສຳຄັນສຳລັບ <xliff:g id="APP">%1$s</xliff:g> ບໍ?"</string>
+    <string name="zen_modes_access_warning_dialog_title" msgid="8372164559156809659">"ອະນຸຍາດການເຂົ້າເຖິງໂໝດສຳລັບ <xliff:g id="APP">%1$s</xliff:g> ບໍ?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2432178679607798200">"ແອັບຈະສາມາດເປີດ/ປິດໂໝດຫ້າມລົບກວນ, ຈັດການ ແລະ ເປີດນຳໃຊ້ໂໝດ, ຮວມທັງປ່ຽນແປງການຕັ້ງຄ່າທີ່ກ່ຽວຂ້ອງໄດ້."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="6288548508466545492">"ຖອດຖອນການເຂົ້າເຖິງໂໝດສຳລັບ <xliff:g id="APP">%1$s</xliff:g> ບໍ?"</string>
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"ລະບົບຈະລຶບໂໝດທັງໝົດທີ່ແອັບນີ້ສ້າງອອກ."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ບໍ່ປັບໃຫ້ເໝາະສົມ"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"ປັບໃຫ້ເໝາະສົມ"</string>
@@ -5151,52 +5155,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> ຕ້ອງການເຊື່ອມຕໍ່ຫາໂທລະສັບນີ້.\n\nທ່ານບໍ່ເຄີຍເຊື່ອມຕໍ່ຫາ <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> ມາກ່ອນ."</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"ຢ່າເຊື່ອມຕໍ່"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"ເຊື່ອມຕໍ່"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"ການຕັ້ງຄ່າ TARE"</string>
-    <string name="tare_on" msgid="2386073225978684535">"ເປີດ"</string>
-    <string name="tare_off" msgid="6305694402929756726">"ປິດ"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"ແປງກັບຄືນໄປເປັນການຕັ້ງຄ່າເລີ່ມຕົ້ນ"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"ແປງກັບຄືນໄປເປັນການຕັ້ງຄ່າເລີ່ມຕົ້ນແລ້ວ."</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"ສົມດຸນທີ່ອິ່ມຕົວສູງສຸດ"</string>
-    <string name="tare_balances" msgid="731881382594747961">"ສົມດຸນ"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"ຂີດຈຳກັດການນຳໃຊ້"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"ຂີດຈຳກັດການນຳໃຊ້ເລີ່ມຕົ້ນ"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"ຂີດຈຳກັດການນຳໃຊ້ຂັ້ນຕ່ຳ"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"ຂີດຈຳກັດການນຳໃຊ້ສູງສຸດ"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"ຕົວປັບແຕ່ງ"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"ການດຳເນີນການ (ລາຄາເພື່ອຜະລິດ)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"ການດຳເນີນການ (ລາຄາຖານ)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ຮາງວັນຕໍ່ກິດຈະກຳດຽວ"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ຮາງວັນຕໍ່ວິນາທີຂອງໄລຍະເວລາກິດຈະກຳ"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"ຮາງວັນສູງສຸດຕໍ່ມື້"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"ການຕິດຕັ້ງແອັບ"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"​ການເຄື່ອນ​ໄຫວ​ສູງ​ສຸດ"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"ເຫັນການແຈ້ງເຕືອນແລ້ວ"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"ເຫັນການແຈ້ງເຕືອນແລ້ວພາຍໃນ 15 ນາທີ"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"ການໂຕ້ຕອບການແຈ້ງເຕືອນ"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"ການໂຕ້ຕອບວິດເຈັດ"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"ການໂຕ້ຕອບຜູ້ໃຊ້ອື່ນໆ"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"ເລີ່ມວຽກສຳຄັນສູງສຸດ"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"ກຳລັງເຮັດວຽກສຳຄັນສູງສຸດ"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"ເລີ່ມວຽກສຳຄັນ"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"ກຳລັງເຮັດວຽກສຳຄັນ"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"ເລີ່ມວຽກຕາມຄ່າເລີ່ມຕົ້ນ"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"ກຳລັງເຮັດວຽກຕາມຄ່າເລີ່ມຕົ້ນ"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"ເລີ່ມວຽກບໍ່ສຳຄັນ"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"ກຳລັງເຮັດວຽກບໍ່ສຳຄັນ"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"ເລີ່ມວຽກສຳຄັນໜ້ອຍສຸດ"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"ກຳລັງເຮັດວຽກສຳຄັນໜ້ອຍສຸດ"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"ໂທດເນື່ອງຈາກໝົດເວລາວຽກ"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ຍອດຄົງເຫຼືອຂັ້ນຕ່ຳເມື່ອສາກເຕັມ (ໄດ້ຮັບການຍົກເວັ້ນ)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ຍອດຄົງເຫຼືອຂັ້ນຕ່ຳເມື່ອສາກເຕັມ (ແອັບລະບົບແບບບໍ່ມີສ່ວນຫົວ)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ຍອດຄົງເຫຼືອຂັ້ນຕ່ຳເມື່ອສາກເຕັມ (ແອັບທີ່ຍັງເຫຼືອ)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"ການເພີ່ມຍອດຄົງເຫຼືອຂັ້ນຕ່ຳເມື່ອສາກເຕັມ (ຕົວອັບເດດແອັບ)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"ກຳລັງສາກໄຟ"</item>
-    <item msgid="658627268149681677">"Doze"</item>
-    <item msgid="1599558140284643834">"ໂໝດປະຢັດພະລັງງານ"</item>
-    <item msgid="588427840913221601">"ສະຖານະການປະມວນຜົນ"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"ຢືນຢັນ"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"ຕົວຢ່າງ"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"ເລືອກພາບພັກໜ້າຈໍ"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"ສະແດງຂໍ້ມູນເພີ່ມເຕີມ"</string>
@@ -5398,6 +5356,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"ຢຸດການແບ່ງປັນສຽງແລ້ວ"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"ເຊື່ອມຕໍ່ອຸປະກອນທີ່ເຂົ້າກັນໄດ້"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"ເພື່ອເລີ່ມການແບ່ງປັນສຽງ, ທຳອິດໃຫ້ເຊື່ອມຕໍ່ຫູຟັງສຽງ LE ໄປຫາໂທລະສັບຂອງທ່ານກ່ອນ"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"ເຊື່ອມຕໍ່ກັບການສະຕຣີມສຽງ LE"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"ການສະຕຣີມສຽງທີ່ຢູ່ໃກ້ຄຽງ"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"ການສະຕຣີມສຽງ"</string>
@@ -5442,5 +5402,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"ສະແກນລະຫັດ QR ການສະຕຣີມສຽງເພື່ອຟັງກັບ <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"ບໍ່ສາມາດແກ້ໄຂລະຫັດຜ່ານໃນລະຫວ່າງທີ່ແບ່ງປັນໄດ້. ເພື່ອປ່ຽນລະຫັດຜ່ານ, ທຳອິດໃຫ້ປິດການແບ່ງປັນສຽງ."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"ຕົວສະແກນລະຫັດ QR"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"ຊອກຫາໃນການຕັ້ງຄ່າ"</string>
 </resources>
