--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Wajah dan <xliff:g id="WATCH">%s</xliff:g> ditambah"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Wajah, cap jari dan <xliff:g id="WATCH">%s</xliff:g> ditambah"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Wajah, cap jari dan <xliff:g id="WATCH">%s</xliff:g> ditambah"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Semakan Identiti dihidupkan dan memerlukan biometrik"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Buka Kunci Authenticator Jauh"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Jam tangan ditambahkan"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Sediakan jam tangan anda"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Tetapan papan kekunci"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Lagi tetapan"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Kemaskinian perisian tegar, perihal dll"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"Petua &amp; sokongan"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Alamat Bluetooth peranti: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Alamat Bluetooth peranti:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Lupakan peranti?"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Tetapkan semula"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Pilih kunci pengubah suai"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Pilih kunci baharu untuk <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Reka letak <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Lalai"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automatik: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Terperinci"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Butang Kebolehaksesan ditetapkan kepada <xliff:g id="SERVICE">%1$s</xliff:g>. Untuk menggunakan pembesaran, sentuh &amp; tahan butang Kebolehaksesan, kemudian pilih pembesaran."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Gerak isyarat kebolehaksesan ditetapkan pada <xliff:g id="SERVICE">%1$s</xliff:g>. Untuk menggunakan pembesaran, leret ke atas menggunakan dua jari dari bahagian bawah skrin dan tahan. Kemudian, pilih pembesaran."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Pintasan kekunci kelantangan"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Tetapan pintasan"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"Pintasan daripada skrin kunci"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Benarkan pintasan ciri dihidupkan daripada skrin kunci. Tekan kedua-dua kekunci kelantangan selama beberapa saat."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Butang kebolehaksesan"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Butang kebolehaksesan &amp; gerak isyarat"</string>
@@ -3347,7 +3351,7 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Mati"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Tiada}=1{1 jadual ditetapkan}other{# jadual ditetapkan}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Jangan Ganggu"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"Mod Keutamaan"</string>
+    <string name="zen_modes_list_title" msgid="4796033710444068729">"Mod"</string>
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"Minimumkan gangguan dan kawal perhatian anda dengan mod untuk tidur, bekerja, memandu dan semua perkara yang lain."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"Buat mod anda sendiri"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Dapatkan pemberitahuan daripada orang dan apl penting sahaja"</string>
@@ -3642,9 +3646,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Apl ini dapat membalas mesej dan mengambil tindakan pada butang dalam pemberitahuan, termasuk menunda atau mengetepikan pemberitahuan dan menjawab panggilan."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Menukar tetapan"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Apl ini dapat menghidupkan atau mematikan ciri Jangan Ganggu dan menukar tetapan yang berkaitan."</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Ciri ini boleh mengurus dan mengaktifkan Mod Keutamaan serta menukar tetapan yang berkaitan."</string>
+    <string name="nls_feature_modes_settings_summary" msgid="70022458305195595">"Ciri ini boleh mengurus dan mengaktifkan Mod serta menukar tetapan yang berkaitan."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Jika anda mematikan akses pemberitahuan untuk <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, akses Jangan Ganggu mungkin turut dimatikan."</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Jika anda mematikan akses pemberitahuan untuk <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, akses Mod Keutamaan juga mungkin dimatikan."</string>
+    <string name="notification_listener_disable_modes_warning_summary" msgid="7528432011433844158">"Jika anda mematikan akses pemberitahuan untuk <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, akses Mod juga mungkin dimatikan."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Matikan"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Batal"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Masa nyata"</string>
@@ -3705,9 +3709,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Akses Jangan Ganggu"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Benarkan Jangan Ganggu"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Tiada sebarang apl yang terpasang meminta akses Jangan Ganggu"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Akses Mod Keutamaan"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Benarkan akses Mod Keutamaan"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Apl yang dipasang tidak meminta akses Mod Keutamaan"</string>
+    <string name="manage_zen_modes_access_title" msgid="2520680004915648824">"Akses mod"</string>
+    <string name="zen_modes_access_detail_switch" msgid="4060429747631111299">"Benarkan akses Mod"</string>
+    <string name="zen_modes_access_empty_text" msgid="8750927923904377110">"Apl yang dipasang tidak meminta akses Mod"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Anda belum membenarkan pemberitahuan daripada apl ini"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Atas permintaan anda, Android menyekat kategori pemberitahuan ini daripada muncul pada peranti ini"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Atas permintaan anda, Android menyekat kumpulan pemberitahuan ini daripada muncul pada peranti ini"</string>
@@ -4098,9 +4102,9 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Mesti sentiasa hidup kerana akses pemberitahuan dihidupkan"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Batalkan akses kepada Jangan Ganggu untuk <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Semua peraturan Jangan Ganggu yang dibuat oleh apl ini akan dialih keluar."</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Benarkan akses kepada Mod Keutamaan untuk <xliff:g id="APP">%1$s</xliff:g>?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Apl ini akan dapat menghidupkan/mematikan Jangan Ganggu, mengurus dan mengaktifkan Mod Keutamaan dan membuat perubahan pada tetapan yang berkaitan."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Batalkan akses kepada Mod Keutamaan untuk <xliff:g id="APP">%1$s</xliff:g>?"</string>
+    <string name="zen_modes_access_warning_dialog_title" msgid="8372164559156809659">"Benarkan akses kepada Mod untuk <xliff:g id="APP">%1$s</xliff:g>?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2432178679607798200">"Apl ini akan dapat menghidupkan/mematikan Jangan Ganggu, mengurus dan mengaktifkan Mod dan membuat perubahan pada tetapan yang berkaitan."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="6288548508466545492">"Batalkan akses Mod untuk <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Semua mod yang dibuat oleh apl ini akan dialih keluar."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Jangan optimumkan"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimumkan"</string>
@@ -5151,52 +5155,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> ingin menyambung kepada telefon ini.\n\nAnda belum menyambung kepada <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> sebelum ini."</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"Jangan sambung"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"Sambung"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"Tetapan TARE"</string>
-    <string name="tare_on" msgid="2386073225978684535">"Hidup"</string>
-    <string name="tare_off" msgid="6305694402929756726">"Mati"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"Berbalik kepada Tetapan Lalai"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"Tetapan berbalik kepada lalai."</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"Baki Maksimum Semasa Peranti Dicas Penuh"</string>
-    <string name="tare_balances" msgid="731881382594747961">"Baki"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"Had Penggunaan"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Had Penggunaan Awal"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Had Penggunaan Minimum"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Had Penggunaan Maksimum"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"Pengubah suai"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"Tindakan (Kos Penghasilan)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"Tindakan (Harga Asas)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Ganjaran setiap satu peristiwa"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Ganjaran setiap saat tempoh peristiwa"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"Ganjaran Maksimum Setiap Hari"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"Pemasangan Apl"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"Aktiviti Popular"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"Pemberitahuan Dilihat"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Pemberitahuan Dilihat Dalam 15 Minit"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"Interaksi Pemberitahuan"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"Interaksi Widget"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"Interaksi Pengguna Lain"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"Kerja Keutamaan Maksimum Bermula"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"Kerja Keutamaan Maksimum Sedang Berjalan"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"Kerja Keutamaan Tinggi Bermula"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"Kerja Keutamaan Tinggi Sedang Berjalan"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"Kerja Keutamaan Lalai Bermula"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"Kerja Keutamaan Lalai Sedang Berjalan"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"Kerja Keutamaan Rendah Bermula"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"Kerja Keutamaan Rendah Sedang Berjalan"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"Kerja Keutamaan Minimum Bermula"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"Kerja Keutamaan Minimum Sedang Berjalan"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"Penalti Tamat Masa Kerja"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Baki Penuh Minimum (Dikecualikan)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Baki Penuh Minimum (Apl Sistem Tanpa Kepala)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Baki Penuh Minimum (Apl yang Tinggal)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Tambahan Baki Penuh Minimum (Pengemas Kini Apl)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"Mengecas"</item>
-    <item msgid="658627268149681677">"Lelap"</item>
-    <item msgid="1599558140284643834">"Mod Penjimatan Kuasa"</item>
-    <item msgid="588427840913221601">"Keadaan Proses"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Sahkan"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Pratonton"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Pilih penyelamat skrin"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Tunjukkan maklumat tambahan"</string>
@@ -5398,6 +5356,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Perkongsian audio dihentikan"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Sambungkan peranti yang serasi"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Untuk mula berkongsi audio, sambungkan fon kepala LE Audio pada telefon anda dahulu"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"Sambung kepada strim LE Audio"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Strim audio berdekatan"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Strim audio"</string>
@@ -5442,5 +5402,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Imbas kod QR strim audio untuk mendengar dengan <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Tidak dapat mengedit kata laluan semasa perkongsian. Untuk mengubah kata laluan, matikan perkongsian audio dahulu."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Pengimbas kod QR"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"Tetapan Carian"</string>
 </resources>
