--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Gezicht en <xliff:g id="WATCH">%s</xliff:g> toegevoegd"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Gezicht, vingerafdruk en <xliff:g id="WATCH">%s</xliff:g> toegevoegd"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Gezicht, vingerafdrukken en <xliff:g id="WATCH">%s</xliff:g> toegevoegd"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Identiteitscontrole staat aan en vereist biometrische gegevens"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Ontgrendelen via Remote Authenticator"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Smartwatch toegevoegd"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Je smartwatch instellen"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Toetsenbordinstellingen"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Meer instellingen"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Firmware-updates, over en meer"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"Tips en support"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Bluetooth-adres van je apparaat: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Bluetooth-adres van apparaat:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Apparaat vergeten?"</string>
@@ -1411,7 +1409,7 @@
     <string name="storage_menu_free" msgid="616100170298501673">"Ruimte vrijmaken"</string>
     <string name="storage_menu_manage" msgid="7465522758801346408">"Opslagruimte beheren"</string>
     <string name="storage_free_up_space_title" msgid="281047807372131975">"Ruimte vrijmaken"</string>
-    <string name="storage_free_up_space_summary" msgid="6650027929735481350">"Ga naar de app Bestanden om ruimte te beheren en vrij te maken"</string>
+    <string name="storage_free_up_space_summary" msgid="6650027929735481350">"Ga naar de app Files by Google om ruimte te beheren en vrij te maken"</string>
     <string name="storage_other_users" msgid="7017206190449510992">"Andere gebruikers"</string>
     <string name="storage_size_large" msgid="1155308277890194878">"<xliff:g id="NUMBER">^1</xliff:g>"<small><small>" <xliff:g id="UNIT">^2</xliff:g>"</small></small>""</string>
     <string name="storage_mount_success" msgid="393972242641313135">"<xliff:g id="NAME">%1$s</xliff:g> is gekoppeld"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Resetten"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Functietoets kiezen"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Kies een nieuwe toets voor <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Indeling: <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Standaard"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automatisch: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Geavanceerd"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Toegankelijkheid is ingesteld op <xliff:g id="SERVICE">%1$s</xliff:g>. Als je vergroting wilt gebruiken, tik je op de knop Toegankelijkheid, houd je deze vast en selecteer je Vergroting."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Het toegankelijkheidsgebaar is ingesteld op <xliff:g id="SERVICE">%1$s</xliff:g>. Als je vergroting wilt gebruiken, swipe je met twee vingers omhoog vanaf het onderkant van het scherm en houd je vast. Selecteer vervolgens Vergroting."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Sneltoets via volumeknop"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Instellingen voor snelkoppelingen"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"Snelkoppeling vanaf vergrendelscherm"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Sta toe dat de functiesnelkoppeling wordt aangezet vanaf het vergrendelscherm. Houd beide volumeknoppen een paar seconden ingedrukt."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Knop Toegankelijkheid"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Knop en gebaar voor toegankelijkheid"</string>
@@ -3347,7 +3351,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Uit"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Geen}=1{1 planning ingesteld}other{# planningen ingesteld}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Niet storen"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"Prioriteitsmodi"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"Minimaliseer afleidingen en houd de controle over je aandacht met modi voor slapen, werken, autorijden en alles daartussenin."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"Je eigen modus maken"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Krijg alleen meldingen van belangrijke mensen en apps"</string>
@@ -3642,9 +3647,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"De app kan berichten beantwoorden en acties uitvoeren voor knoppen in meldingen, waaronder meldingen snoozen of sluiten en gesprekken beantwoorden."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Instellingen wijzigen"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"De app kan Niet storen aan- of uitzetten en gerelateerde instellingen wijzigen"</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"De app kan prioriteitsmodi beheren en activeren, en gerelateerde instellingen wijzigen."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Als je <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> geen toegang tot meldingen geeft, krijgt Niet storen mogelijk ook geen toegang."</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Als je toegang tot meldingen intrekt voor <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, wordt toegang tot prioriteitsmodi misschien ook ingetrokken."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Uitzetten"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Annuleren"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Realtime"</string>
@@ -3705,9 +3712,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Toegang tot Niet storen"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Niet storen toestaan"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Er zijn geen geïnstalleerde apps die toegang tot \'Niet storen\' hebben aangevraagd"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Toegang tot prioriteitsmodi"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Toegang tot prioriteitsmodi toestaan"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Er zijn geen geïnstalleerde apps die toegang tot prioriteitsmodi hebben aangevraagd"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Je hebt meldingen van deze app niet toegestaan"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Op jouw verzoek toont Android geen meldingen van deze categorie op dit apparaat"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Op jouw verzoek toont Android deze groep meldingen niet op dit apparaat"</string>
@@ -4098,9 +4108,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Moet aan blijven omdat toegang tot meldingen is gegeven"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Toegang tot \'Niet storen\' intrekken voor <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Alle \'Niet storen\'-regels die door deze app zijn gemaakt, worden verwijderd."</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> toegang tot prioriteitsmodi geven?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"De app kan de functie Niet storen aan-/uitzetten, prioriteitsmodi beheren en activeren, en wijzigingen aanbrengen in gerelateerde instellingen."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Toegang tot prioriteitsmodi intrekken voor <xliff:g id="APP">%1$s</xliff:g>?"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Alle modi die door deze app zijn gemaakt, worden verwijderd."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Niet optimaliseren"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimaliseren"</string>
@@ -5151,52 +5164,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> wil verbinding maken met deze telefoon.\n\nJe hebt nog niet eerder verbinding gemaakt met <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g>."</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"Geen verbinding maken"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"Verbinding maken"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"TARE-instellingen"</string>
-    <string name="tare_on" msgid="2386073225978684535">"Aan"</string>
-    <string name="tare_off" msgid="6305694402929756726">"Uit"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"Standaardinstellingen herstellen"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"Standaardinstellingen hersteld."</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"Maximale balans als volledig opgeladen"</string>
-    <string name="tare_balances" msgid="731881382594747961">"Saldo\'s"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"Verbruikslimieten"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Initiële verbruikslimiet"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Minimale verbruikslimiet"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Maximale verbruikslimiet"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"Modifiers"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"Acties (productiekosten)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"Acties (basisprijs)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Beloningen per afzonderlijk evenement"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Beloningen per seconde van gebeurtenisduur"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"Maximumaantal beloningen per dag"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"App-installatie"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"Topactiviteit"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"Melding gezien"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Melding gezien binnen 15 minuten"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"Meldingsinteractie"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"Widgetinteractie"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"Andere gebruikersinteractie"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"Starten: taak (maximale prioriteit)"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"Actief: taak (maximale prioriteit)"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"Starten: taak (hoge prioriteit)"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"Actief: taak (hoge prioriteit)"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"Starten: taak (standaardprioriteit)"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"Actief: taak (standaardprioriteit)"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"Starten: taak (lage prioriteit)"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"Actief: taak (lage prioriteit)"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"Starten: taak (minimale prioriteit)"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"Actief: taak (minimale prioriteit)"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"Time-outpenalty voor taak"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimaal verzadigd saldo (vrijgesteld)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimaal verzadigd saldo (systeem-app zonder interface)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimaal verzadigd saldo (resterende apps)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Aanvulling voor minimaal verzadigd saldo (app-updaters)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"Opladen"</item>
-    <item msgid="658627268149681677">"Sluimeren"</item>
-    <item msgid="1599558140284643834">"Energiebesparingsmodus"</item>
-    <item msgid="588427840913221601">"Processtatus"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Bevestigen"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Voorbeeld"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Kies een screensaver"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Extra informatie tonen"</string>
@@ -5398,6 +5365,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Audio delen gestopt"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Een compatibel apparaat verbinden"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Als je audio wilt delen, verbind je eerst een LE Audio-koptelefoon met je telefoon"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"Verbinden met een LE-audiostream"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Audiostreams in de buurt"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Audiostreams"</string>
@@ -5442,5 +5411,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Scan de QR-code van een audiostream om mee te luisteren met <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Kan wachtwoord niet bewerken tijdens het delen. Als je het wachtwoord wilt wijzigen, zet je audio delen eerst uit."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR-codescanner"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"Zoeken in Instellingen"</string>
 </resources>
