--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"ਚਿਹਰੇ ਅਤੇ <xliff:g id="WATCH">%s</xliff:g> ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"ਚਿਹਰੇ, ਫਿੰਗਰਪ੍ਰਿੰਟ ਅਤੇ <xliff:g id="WATCH">%s</xliff:g> ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"ਚਿਹਰੇ, ਫਿੰਗਰਪ੍ਰਿੰਟਾਂ ਅਤੇ <xliff:g id="WATCH">%s</xliff:g> ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"ਪਛਾਣ ਦੀ ਜਾਂਚ ਕਰਨ ਦੀ ਸੁਵਿਧਾ ਚਾਲੂ ਹੈ ਅਤੇ ਇਸਦੇ ਲਈ ਬਾਇਓਮੈਟ੍ਰਿਕ ਦੀ ਲੋੜ ਹੈ"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticator ਅਣਲਾਕ"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"ਘੜੀ ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"ਆਪਣੀ ਘੜੀ ਦਾ ਸੈੱਟਅੱਪ ਕਰੋ"</string>
@@ -480,7 +479,7 @@
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"ਆਪਣੀ ਉਂਗਲ ਨੂੰ ਸੈਂਸਰ ’ਤੇ ਰੱਖੋ ਅਤੇ ਇੱਕ ਥਰਥਰਾਹਟ ਮਹਿਸੂਸ ਹੋਣ ਤੋਂ ਬਾਅਦ ਚੁੱਕ ਲਵੋ"</string>
     <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"ਆਪਣੇ ਫਿੰਗਰਪ੍ਰਿੰਟ ਨੂੰ ਉਦੋਂ ਤੱਕ ਸੈਂਸਰ \'ਤੇ ਸਿੱਧਾ ਰੱਖੋ ਜਦੋਂ ਤੱਕ ਤੁਹਾਨੂੰ ਥਰਥਰਾਹਟ ਮਹਿਸੂਸ ਨਹੀਂ ਹੁੰਦੀ"</string>
     <string name="security_settings_sfps_enroll_start_message" msgid="9054672627477685212">"ਬਟਨ ਨੂੰ ਦਬਾਏ ਬਿਨਾਂ, ਆਪਣੇ ਫਿੰਗਰਪ੍ਰਿੰਟ ਨੂੰ ਸੈਂਸਰ \'ਤੇ ਉਦੋਂ ਤੱਕ ਰੱਖੋ ਜਦੋਂ ਤੱਕ ਤੁਸੀਂ ਥਰਥਰਾਹਟ ਮਹਿਸੂਸ ਨਹੀਂ ਕਰਦੇ।\n\nਹਰ ਵਾਰ ਆਪਣੀ ਉਂਗਲ ਨੂੰ ਥੋੜ੍ਹਾ ਜਿਹਾ ਹਿਲਾਓ। ਇਸ ਨਾਲ ਤੁਹਾਡੇ ਫਿੰਗਰਪ੍ਰਿੰਟ ਨੂੰ ਬਿਹਤਰ ਢੰਗ ਨਾਲ ਕੈਪਚਰ ਕਰਨ ਵਿੱਚ ਮਦਦ ਮਿਲਦੀ ਹੈ।"</string>
-    <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"ਫਿੰਗਰਪ੍ਰਿੰਟ ਸੈਂਸਰ ਨੂੰ ਸਪਰਸ਼ ਕਰਕੇ ਰੱਖੋ"</string>
+    <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"ਫਿੰਗਰਪ੍ਰਿੰਟ ਸੈਂਸਰ ਨੂੰ ਸਪਰਸ਼ ਕਰ ਕੇ ਰੱਖੋ"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"ਚੁੱਕੋ, ਫਿਰ ਦੁਬਾਰਾ ਸਪਰਸ਼ ਕਰੋ"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"ਇੱਕ ਵਾਰ ਹੋਰ"</string>
     <string name="security_settings_udfps_enroll_repeat_title_touch_icon" msgid="4096344864386190335">"ਫਿੰਗਰਪ੍ਰਿੰਟ ਪ੍ਰਤੀਕ ਦੀਆਂ ਹਿਦਾਇਤਾਂ ਦੀ ਪਾਲਣਾ ਕਰੋ"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"ਕੀ-ਬੋਰਡ ਸੈਟਿੰਗਾਂ"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"ਹੋਰ ਸੈਟਿੰਗਾਂ"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ਫ਼ਰਮਵੇਅਰ ਅੱਪਡੇਟ, ਇਸ ਬਾਰੇ ਅਤੇ ਹੋਰ"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"ਨੁਕਤੇ ਅਤੇ ਸਹਾਇਤਾ"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ਡੀਵਾਈਸ ਦਾ ਬਲੂਟੁੱਥ ਪਤਾ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ਡੀਵਾਈਸ ਦਾ ਬਲੂਟੁੱਥ ਪਤਾ: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ਕੀ ਡੀਵਾਈਸ ਨੂੰ ਭੁੱਲਣਾ ਹੈ?"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"ਰੀਸੈੱਟ ਕਰੋ"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"ਸੋਧਕ ਕੁੰਜੀ ਚੁਣੋ"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> ਲਈ ਨਵੀਂ ਕੁੰਜੀ ਚੁਣੋ:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> ਖਾਕਾ"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"ਸਵੈਚਲਿਤ: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"ਅਡਵਾਂਸ"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"ਪਹੁੰਚਯੋਗਤਾ ਬਟਨ <xliff:g id="SERVICE">%1$s</xliff:g> \'ਤੇ ਸੈੱਟ ਹੈ। ਵੱਡਦਰਸ਼ੀਕਰਨ ਦੀ ਵਰਤੋਂ ਕਰਨ ਲਈ, ਪਹੁੰਚਯੋਗਤਾ ਬਟਨ ਨੂੰ ਸਪੱਰਸ਼ ਕਰੋ ਅਤੇ ਦਬਾਈ ਰੱਖੋ, ਫਿਰ ਵੱਡਦਰਸ਼ੀਕਰਨ ਨੂੰ ਚੁਣੋ।"</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"ਪਹੁੰਚਯੋਗਤਾ ਸੰਕੇਤਾਂ ਨੂੰ <xliff:g id="SERVICE">%1$s</xliff:g> \'ਤੇ ਸੈੱਟ ਕੀਤਾ ਜਾਂਦਾ ਹੈ। ਵੱਡਦਰਸ਼ੀਕਰਨ ਨੂੰ ਵਰਤਣ ਲਈ, ਦੋ ਉਂਗਲਾਂ ਨਾਲ ਸਕ੍ਰੀਨ ਦੇ ਹੇਠਾਂ ਤੋਂ ਉੱਪਰ ਵੱਲ ਸਵਾਈਪ ਕਰਕੇ ਦਬਾਈ ਰੱਖੋ। ਫਿਰ ਵੱਡਦਰਸ਼ੀਕਰਨ ਚੁਣੋ।"</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"ਅਵਾਜ਼ ਕੁੰਜੀ ਸ਼ਾਰਟਕੱਟ"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"ਸ਼ਾਰਟਕੱਟ ਸੈਟਿੰਗਾਂ"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"ਲਾਕ ਸਕ੍ਰੀਨ ਤੋਂ ਸ਼ਾਰਟਕੱਟ"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"ਲਾਕ ਸਕ੍ਰੀਨ ਤੋਂ ਵਿਸ਼ੇਸ਼ਤਾ ਸ਼ਾਰਟਕੱਟ ਨੂੰ ਚਾਲੂ ਕਰਨ ਦੀ ਆਗਿਆ ਦਿਓ। ਕੁਝ ਸਕਿੰਟਾਂ ਲਈ ਦੋਵੇਂ ਅਵਾਜ਼ ਕੁੰਜੀਆਂ ਨੂੰ ਦਬਾਈ ਰੱਖੋ।"</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"ਪਹੁੰਚਯੋਗਤਾ ਬਟਨ"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"ਪਹੁੰਚਯੋਗਤਾ ਬਟਨ ਅਤੇ ਇਸ਼ਾਰਾ"</string>
@@ -3347,7 +3351,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"ਬੰਦ"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{ਕੋਈ ਨਹੀਂ}=1{1 ਸਮਾਂ-ਸੂਚੀ ਸੈੱਟ ਹੈ}other{# ਸਮਾਂ-ਸੂਚੀਆਂ ਸੈੱਟ ਹਨ}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"ਤਰਜੀਹ ਮੋਡ"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"ਧਿਆਨ ਭਟਕਾਉਣ ਵਾਲੀਆਂ ਚੀਜ਼ਾਂ ਨੂੰ ਘਟਾਓ ਅਤੇ ਸੌਣ, ਕੰਮ ਕਰਨ, ਡਰਾਈਵ ਕਰਨ ਅਤੇ ਇਸ ਦੌਰਾਨ ਕੁਝ ਵੀ ਕਰਨ ਸੰਬੰਧੀ ਮੋਡਾਂ ਨੂੰ ਕੰਟਰੋਲ ਕਰੋ।"</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"ਆਪਣਾ ਖੁਦ ਦਾ ਮੋਡ ਬਣਾਓ"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"ਸਿਰਫ਼ ਮਹੱਤਵਪੂਰਨ ਲੋਕਾਂ ਅਤੇ ਐਪਾਂ ਵੱਲੋਂ ਸੂਚਨਾ ਪ੍ਰਾਪਤ ਕਰੋ"</string>
@@ -3642,9 +3647,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"ਇਹ ਸੁਨੇਹਿਆਂ ਦਾ ਜਵਾਬ ਦੇ ਸਕਦੀ ਹੈ ਅਤੇ ਸੂਚਨਾਵਾਂ ਨੂੰ ਸਨੂਜ਼ ਕਰਨ ਜਾਂ ਖਾਰਜ ਕਰਨ ਜਾਂ ਫ਼ੋਨ ਕਾਲਾਂ ਦਾ ਜਵਾਬ ਦੇਣ ਸਮੇਤ, ਸੂਚਨਾਵਾਂ ਵਿੱਚ ਬਟਨਾਂ \'ਤੇ ਕਾਰਵਾਈ ਵੀ ਕਰ ਸਕੇਗੀ।"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ਸੈਟਿੰਗਾਂ ਬਦਲਣਾ"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"ਇਹ \'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਨੂੰ ਬੰਦ ਜਾਂ ਚਾਲੂ ਕਰ ਸਕਦੀ ਅਤੇ ਸੰਬੰਧਿਤ ਸੈਟਿੰਗਾਂ ਨੂੰ ਬਦਲ ਸਕਦੀ ਹੈ।"</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"ਇਸ ਨਾਲ \'ਤਰਜੀਹੀ ਮੋਡ\' ਦਾ ਪ੍ਰਬੰਧਨ ਅਤੇ ਉਨ੍ਹਾਂ ਨੂੰ ਕਿਰਿਆਸ਼ੀਲ ਕੀਤਾ ਜਾ ਸਕਦਾ ਹੈ ਅਤੇ ਸੰਬੰਧਿਤ ਸੈਟਿੰਗਾਂ ਨੂੰ ਬਦਲਿਆ ਜਾ ਸਕਦਾ ਹੈ।"</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"ਜੇ ਤੁਸੀਂ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> ਲਈ ਸੂਚਨਾ ਪਹੁੰਚ ਨੂੰ ਬੰਦ ਕਰਦੇ ਹੋ, ਤਾਂ \'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਪਹੁੰਚ ਵੀ ਬੰਦ ਹੋ ਸਕਦੀ ਹੈ।"</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"ਜੇ ਤੁਸੀਂ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> ਲਈ ਸੂਚਨਾ ਪਹੁੰਚ ਨੂੰ ਬੰਦ ਕਰਦੇ ਹੋ, ਤਾਂ \'ਤਰਜੀਹੀ ਮੋਡ\' ਪਹੁੰਚ ਵੀ ਬੰਦ ਹੋ ਸਕਦੀ ਹੈ।"</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"ਬੰਦ ਕਰੋ"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"ਰੱਦ ਕਰੋ"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ਅਸਲ-ਸਮਾਂ"</string>
@@ -3705,9 +3712,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"\'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਤੱਕ ਪਹੁੰਚ"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਨੂੰ ਆਗਿਆ ਦਿਓ"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ਕਿਸੇ ਵੀ ਸਥਾਪਤ ਐਪਾਂ ਨੇ ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ ਪਹੁੰਚ ਦੀ ਬੇਨਤੀ ਨਹੀਂ ਕੀਤੀ ਹੈ"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"\'ਤਰਜੀਹੀ ਮੋਡ\' ਤੱਕ ਪਹੁੰਚ"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"\'ਤਰਜੀਹੀ ਮੋਡ\' ਤੱਕ ਪਹੁੰਚ ਦੀ ਆਗਿਆ ਦਿਓ"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"ਕਿਸੇ ਵੀ ਸਥਾਪਤ ਐਪ ਨੇ \'ਤਰਜੀਹੀ ਮੋਡ\' ਤੱਕ ਪਹੁੰਚ ਦੀ ਬੇਨਤੀ ਨਹੀਂ ਕੀਤੀ"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"ਤੁਸੀਂ ਇਸ ਐਪ ਤੋਂ ਸੂਚਨਾਵਾਂ ਦੀ ਆਗਿਆ ਨਹੀਂ ਦਿੱਤੀ ਹੈ"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"ਤੁਹਾਡੀ ਬੇਨਤੀ ਕਾਰਨ, Android ਵੱਲੋਂ ਸੂਚਨਾਵਾਂ ਦੀ ਇਸ ਸ਼੍ਰੇਣੀ ਨੂੰ ਇਸ ਡੀਵਾਈਸ \'ਤੇ ਦਿਖਾਏ ਜਾਣ ਤੋਂ ਬਲਾਕ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"ਤੁਹਾਡੀ ਬੇਨਤੀ ਕਾਰਨ, Android ਵੱਲੋਂ ਸੂਚਨਾਵਾਂ ਦੇ ਇਸ ਗਰੁੱਪ ਨੂੰ ਇਸ ਡੀਵਾਈਸ \'ਤੇ ਦਿਖਾਏ ਜਾਣ ਤੋਂ ਬਲਾਕ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"</string>
@@ -4098,9 +4108,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"ਸੂਚਨਾ ਪਹੁੰਚ ਦੇ ਚਾਲੂ ਹੋਣ ਕਾਰਨ ਇਸ ਦਾ ਚਾਲੂ ਰਹਿਣਾ ਲਾਜ਼ਮੀ ਹੈ"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"ਕੀ <xliff:g id="APP">%1$s</xliff:g> ਲਈ \'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' \'ਤੇ ਪਹੁੰਚ ਰੱਦ ਕਰਨੀ ਹੈ?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ਇਸ ਐਪ ਵੱਲੋਂ ਬਣਾਏ ਸਾਰੇ \'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਨਿਯਮ ਹਟਾ ਦਿੱਤੇ ਜਾਣਗੇ।"</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"ਕੀ <xliff:g id="APP">%1$s</xliff:g> ਦੇ ਲਈ \'ਤਰਜੀਹੀ ਮੋਡ\' ਤੱਕ ਪਹੁੰਚ ਕਰਨ ਦੀ ਆਗਿਆ ਦੇਣੀ ਹੈ?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"ਐਪ \'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਨੂੰ ਚਾਲੂ/ਬੰਦ ਕਰ, \'ਤਰਜੀਹੀ ਮੋਡ\' ਦਾ ਪ੍ਰਬੰਧਨ ਕਰ ਅਤੇ ਕਿਰਿਆਸ਼ੀਲ ਕਰ ਅਤੇ ਸੰਬੰਧਿਤ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਤਬਦੀਲੀਆਂ ਕਰ ਸਕੇਗੀ।"</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"ਕੀ <xliff:g id="APP">%1$s</xliff:g> ਲਈ \'ਤਰਜੀਹੀ ਮੋਡ\' ਤੱਕ ਪਹੁੰਚ ਨੂੰ ਰੱਦ ਕਰਨਾ ਹੈ?"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"ਇਸ ਐਪ ਵੱਲੋਂ ਬਣਾਏ ਗਏ ਸਾਰੇ ਮੋਡ ਹਟਾ ਦਿੱਤੇ ਜਾਣਗੇ।"</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ਅਨੁਕੂਲਿਤ ਨਾ ਕਰੋ"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"ਸੁਯੋਗ ਬਣਾਓ"</string>
@@ -5151,52 +5164,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> ਇਸ ਫ਼ੋਨ ਨਾਲ ਕਨੈਕਟ ਕਰਨਾ ਚਾਹੁੰਦਾ ਹੈ।\n\nਤੁਸੀਂ ਪਹਿਲਾਂ ਕਦੇ ਵੀ <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> ਨਾਲ ਕਨੈਕਟ ਨਹੀਂ ਕੀਤਾ ਹੈ।"</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"ਕਨੈਕਟ ਨਾ ਕਰੋ"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"ਕਨੈਕਟ ਕਰੋ"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"TARE ਸੈਟਿੰਗਾਂ"</string>
-    <string name="tare_on" msgid="2386073225978684535">"ਚਾਲੂ"</string>
-    <string name="tare_off" msgid="6305694402929756726">"ਬੰਦ"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਸੈਟਿੰਗਾਂ \'ਤੇ ਵਾਪਸ ਜਾਓ"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"ਸੈਟਿੰਗਾਂ ਨੂੰ ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਸਥਿਤੀ \'ਚ ਕਰੋ।"</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"ਬੈਟਰੀ ਪੂਰੀ ਚਾਰਜ ਹੋਣ \'ਤੇ ਵੱਧੋ-ਵੱਧ ਬਕਾਇਆ"</string>
-    <string name="tare_balances" msgid="731881382594747961">"ਬਕਾਇਆ"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"ਖਪਤ ਸੀਮਾਵਾਂ"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"ਸ਼ੁਰੂਆਤੀ ਖਪਤ ਸੀਮਾਵਾਂ"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"ਘੱਟੋ-ਘੱਟ ਖਪਤ ਸੀਮਾ"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"ਵੱਧੋ-ਵੱਧ ਖਪਤ ਸੀਮਾ"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"ਸੋਧਕ"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"ਕਾਰਵਾਈਆਂ (ਉਤਪਾਦ ਦੀ ਲਾਗਤ)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"ਕਾਰਵਾਈਆਂ (ਮੁੱਢਲੀ ਕੀਮਤ)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ਹਰ ਇਕਹਿਰੇ ਇਵੈਂਟ ਲਈ ਇਨਾਮ"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ਇਵੈਂਟ ਦੀ ਮਿਆਦ ਦੇ ਪ੍ਰਤੀ ਸਕਿੰਟ ਇਨਾਮ"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"ਹਰ ਦਿਨ ਲਈ ਵੱਧ ਤੋਂ ਵੱਧ ਇਨਾਮ"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"ਐਪ ਸਥਾਪਨ"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"ਪ੍ਰਮੁੱਖ ਸਰਗਰਮੀ"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"ਸੂਚਨਾ ਦੇਖੀ ਗਈ"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"ਸੂਚਨਾ 15 ਮਿੰਟ ਵਿੱਚ ਦੇਖੀ ਗਈ"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"ਸੂਚਨਾ ਅੰਤਰਕਿਰਿਆ"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"ਵਿਜੇਟ ਅੰਤਰਕਿਰਿਆ"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"ਹੋਰ ਵਰਤੋਂਕਾਰ ਵੱਲੋਂ ਅੰਤਰਕਿਰਿਆ"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"ਵੱਧੋ-ਵੱਧ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਸ਼ੁਰੂ ਕਰਨਾ"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"ਵੱਧੋ-ਵੱਧ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਕਰਨਾ"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"ਵੱਧ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਸ਼ੁਰੂ ਕਰਨਾ"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"ਵੱਧ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਕਰਨਾ"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਸ਼ੁਰੂ ਕਰਨਾ"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਕਰਨਾ"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"ਘੱਟ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਸ਼ੁਰੂ ਕਰਨਾ"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"ਘੱਟ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਕਰਨਾ"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"ਘੱਟੋ-ਘੱਟ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਸ਼ੁਰੂ ਕਰਨਾ"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"ਘੱਟੋ-ਘੱਟ ਤਰਜੀਹ ਵਾਲਾ ਕੰਮ ਕਰਨਾ"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"ਕੰਮ ਦਾ ਸਮਾਂ ਸਮਾਪਤ ਹੋਣ \'ਤੇ ਜੁਰਮਾਨਾ"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ਬੈਟਰੀ ਪੂਰੀ ਚਾਰਜ ਹੋਣ \'ਤੇ ਘੱਟੋ-ਘੱਟ ਬਕਾਇਆ (ਛੋਟ ਦਿੱਤੀ ਗਈ)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ਬੈਟਰੀ ਪੂਰੀ ਚਾਰਜ ਹੋਣ \'ਤੇ ਘੱਟੋ-ਘੱਟ ਬਕਾਇਆ (ਹੈੱਡਲੈੱਸ ਸਿਸਟਮ ਐਪ)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ਬੈਟਰੀ ਪੂਰੀ ਚਾਰਜ ਹੋਣ \'ਤੇ ਘੱਟੋ-ਘੱਟ ਬਕਾਇਆ (ਬਾਕੀ ਐਪਾਂ)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"ਬੈਟਰੀ ਪੂਰੀ ਚਾਰਜ ਹੋਣ \'ਤੇ ਘੱਟੋ-ਘੱਟ ਬਕਾਇਆ (ਐਪ ਅੱਪਡੇਟਰ)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"ਚਾਰਜ ਹੋ ਰਹੀ ਹੈ"</item>
-    <item msgid="658627268149681677">"ਡੋਜ਼"</item>
-    <item msgid="1599558140284643834">"ਪਾਵਰ ਸੇਵ ਮੋਡ"</item>
-    <item msgid="588427840913221601">"ਪ੍ਰਕਿਰਿਆ ਦੀ ਸਥਿਤੀ"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"ਤਸਦੀਕ ਕਰੋ"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"ਪੂਰਵ-ਝਲਕ"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"ਸਕ੍ਰੀਨ ਸੇਵਰ ਚੁਣੋ"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"ਵਧੀਕ ਜਾਣਕਾਰੀ ਦਿਖਾਓ"</string>
@@ -5398,6 +5365,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"ਆਡੀਓ ਸਾਂਝਾਕਰਨ ਬੰਦ ਕੀਤਾ ਗਿਆ"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"ਕਿਸੇ ਅਨੁਰੂਪ ਡੀਵਾਈਸ ਨੂੰ ਕਨੈਕਟ ਕਰੋ"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"ਆਡੀਓ ਨੂੰ ਸਾਂਝਾ ਕਰਨਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਪਹਿਲਾਂ LE ਆਡੀਓ ਹੈੱਡਫ਼ੋਨਾਂ ਨੂੰ ਆਪਣੇ ਫ਼ੋਨ ਨਾਲ ਕਨੈਕਟ ਕਰੋ"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"LE ਆਡੀਓ ਸਟ੍ਰੀਮ ਨਾਲ ਕਨੈਕਟ ਕਰੋ"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"ਨਜ਼ਦੀਕੀ ਆਡੀਓ ਸਟ੍ਰੀਮ"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"ਆਡੀਓ ਸਟ੍ਰੀਮ"</string>
@@ -5442,5 +5411,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ਨਾਲ ਸੁਣਨ ਲਈ ਆਡੀਓ ਸਟ੍ਰੀਮ ਦਾ QR ਕੋਡ ਸਕੈਨ ਕਰੋ"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"ਸਾਂਝਾਕਰਨ ਦੌਰਾਨ ਪਾਸਵਰਡ ਦਾ ਸੰਪਾਦਨ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਪਾਸਵਰਡ ਬਦਲਣ ਲਈ, ਪਹਿਲਾਂ ਆਡੀਓ ਸਾਂਝਾਕਰਨ ਨੂੰ ਬੰਦ ਕਰੋ।"</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR ਕੋਡ ਸਕੈਨਰ"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"ਖੋਜ ਸੈਟਿੰਗਾਂ"</string>
 </resources>
