--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Ansikte och <xliff:g id="WATCH">%s</xliff:g> har lagts till"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Ansikte, fingeravtryck och <xliff:g id="WATCH">%s</xliff:g> har lagts till"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Ansikte, fingeravtryck och <xliff:g id="WATCH">%s</xliff:g> har lagts till"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Identitetskontroll är aktiverad så biometrisk data krävs"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Upplåsning med fjärrverifierare"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Klockan har lagts till"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Konfigurera klockan"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Tangentbordsinställningar"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Fler inställningar"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Firmware-uppdateringar, om, med mera"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"Support och tips"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Enhetens Bluetooth-adress: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Enhetens Bluetooth-adress:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Vill du glömma enheten?"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Återställ"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Välj specialtangent"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Välj en ny tangent för <xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Layouten <xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Standard"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Automatiskt: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Avancerat"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"<xliff:g id="SERVICE">%1$s</xliff:g> har angetts för tillgänglighetsknappen. Om du vill använda förstoring trycker du länge på tillgänglighetsknappen och väljer förstoring."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Tillgänglighetsrörelsen är inställd på <xliff:g id="SERVICE">%1$s</xliff:g>. Om du vill använda förstoring sveper du uppåt med två fingrar från skärmens nederkant och håller kvar fingret. Välj sedan Förstoring."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Kortkommando för volymknapp"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Inställningar för kortkommandon"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"Kortkommando från låsskärm"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Tillåt att genvägen för funktionen aktiveras från låsskärmen. Håll båda volymknapparna nedtryckta i ett par sekunder."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Tillgänglighetsknapp"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Tillgänglighetsknapp och rörelse"</string>
@@ -3347,7 +3351,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Av"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Inga}=1{1 schema har ställts in}other{# scheman har ställts in}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Stör ej"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"Prioriterade lägen"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"Minimera distraktioner med lägen för när du sover, jobbar, kör och allt däremellan."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"Skapa ditt eget läge"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Få bara aviseringar från viktiga personer och appar"</string>
@@ -3642,9 +3647,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Den kan svara på meddelanden och använda åtgärdsknappar i aviseringar, inklusive att skjuta upp eller stänga aviseringar och svara på samtal."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Ändra inställningar"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Den kan aktivera/inaktivera Stör ej och ändra relaterade inställningar."</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Den kan hantera och aktivera prioriterade lägen och ändra relaterade inställningar."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Om du inaktiverar aviseringsåtkomst för <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> kan åtkomsten till Stör ej också inaktiveras."</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Om du inaktiverar åtkomst till aviseringar för <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> kan även åtkomsten till prioriterade lägen inaktiveras."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Inaktivera"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Avbryt"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Realtid"</string>
@@ -3705,9 +3712,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Stör ej-åtkomst"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Tillåt Stör ej"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Inga installerade appar har begärt Stör ej-åtkomst"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Åtkomst till prioriterade lägen"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Tillåt åtkomst till prioriterade lägen"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Inga installerade appar har begärt åtkomst till prioriterade lägen"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Du har inte godkänt aviseringar från den här appen"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"På din begäran blockeras denna aviseringskategori av Android och visas inte på enheten"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"På din begäran blockeras denna aviseringsgrupp av Android och visas inte på enheten"</string>
@@ -4098,9 +4108,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Måste vara på eftersom aviseringsåtkomsten är aktiverad"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Vill du återkalla åtkomstbehörigheten till Stör ej för <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Alla Stör ej-regler som skapats med den här appen tas bort."</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Vill du bevilja åtkomst till prioriterade lägen för <xliff:g id="APP">%1$s</xliff:g>?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Appen kommer att kunna aktivera och inaktivera Stör ej, hantera och aktivera prioriterade lägen och ändra relaterade inställningar."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Vill du återkalla åtkomst till prioriterade lägen för <xliff:g id="APP">%1$s</xliff:g>?"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Alla lägen som skapats i appen tas bort."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Optimera inte"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimera"</string>
@@ -5151,52 +5164,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> vill ansluta till den här telefonen.\n\nDu har inte anslutit till <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> tidigare."</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"Anslut inte"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"Anslut"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"Inställningar för TARE"</string>
-    <string name="tare_on" msgid="2386073225978684535">"På"</string>
-    <string name="tare_off" msgid="6305694402929756726">"Av"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"Återställ standardinställningarna"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"Standardinställningarna har återställts"</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"Högsta saldo vid fulladdad enhet"</string>
-    <string name="tare_balances" msgid="731881382594747961">"Saldo"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"Konsumtionsgräns"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Första konsumtionsgräns"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Lägre konsumtionsgräns"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Övre konsumtionsgräns"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"Modifierare"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"Åtgärder (produktionspris)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"Åtgärder (baspris)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Belöningar per enskild händelse"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Belöningar/sekund medan händelsen pågår"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"Högsta antal belöningar per dag"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"Appinstallation"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"Toppaktivitet"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"Aviseringen har setts"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Aviseringen sågs inom 15 minuter"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"Interaktion med avisering"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"Widgetinteraktion"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"Annan användarinteraktion"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"Start av jobb med högsta prioritet"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"Körning av jobb med högsta prioritet"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"Start av jobb med hög prioritet"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"Körning av jobb med hög prioritet"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"Start av jobb med standardprioritet"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"Körning av jobb med standardprioritet"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"Start av jobb med låg prioritet"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"Körning av jobb med låg prioritet"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"Start av jobb med lägsta prioritet"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"Körning av jobb med lägsta prioritet"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"Påföljd vid uppnådd tidsgräns för jobb"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Lägsta saldo vid fulladdad enhet (undantagna)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Lägsta saldo vid fulladdad enhet (fönsterlös systemapp)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Lägsta saldo vid fulladdad enhet (återstående appar)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Lägsta saldo vid fulladdad enhet (appuppdaterare)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"Laddning"</item>
-    <item msgid="658627268149681677">"Slummerfunktion"</item>
-    <item msgid="1599558140284643834">"Strömsparläge"</item>
-    <item msgid="588427840913221601">"Processtatus"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Bekräfta"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Förhandsgranska"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Välj en skärmsläckare"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Visa mer information"</string>
@@ -5398,6 +5365,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Ljuddelningen har avslutats"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Anslut en kompatibel enhet"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Om du vill dela ljud ska du börja med att ansluta LE Audio-hörlurarna till din telefon"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"Ansut till en LE Audio-stream"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Ljudstreamar i närheten"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Ljudstreamar"</string>
@@ -5442,5 +5411,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Skanna QR-koden för en ljudstream om du vill lyssna med <xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Det går inte att redigera lösenordet medan delning pågår. Om du vill byta lösenord måste du först stänga av ljuddelningen."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR-skanner"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"Sökinställningar"</string>
 </resources>
