--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"چہرہ اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"چہرہ، فنگر پرنٹ اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"چہرہ، فنگر پرنٹس اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"شناختی چیک آن ہے اور اس کے لیے بائیو میٹرک کی ضرورت ہے"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"‏Remote Authenticator کو غیر مقفل کریں"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"گھڑی کو شامل کیا گیا"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"اپنی گھڑی سیٹ اپ کریں"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"کی بورڈ کی ترتیبات"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"مزید ترتیبات"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"فرم ویئر اپ ڈیٹس، تعارف اور مزید بہت کچھ"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"تجاویز اور سپورٹ"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"آلے کا بلوٹوتھ پتہ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"آلے کا بلوٹوتھ پتہ:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"آلہ بھول جائیں؟"</string>
@@ -1993,6 +1991,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"ری سیٹ کریں"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"موڈیفائر کلید منتخب کریں"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"‫<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g> کے لیے نئی کلید منتخب کریں:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"<xliff:g id="IME_LABEL">%s</xliff:g> لے آؤٹ"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"ڈیفالٹ"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"خودکار: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2204,9 +2206,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"جدید ترین"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"ایکسیسبیلٹی بٹن <xliff:g id="SERVICE">%1$s</xliff:g> پر سیٹ ہے۔ میگنیفکیشن استعمال کرنے کیلئے، ایکسیسبیلٹی بٹن ٹچ کریں اور دبائے رکھیں، پھر میگنیفکیشن منتخب کریں۔"</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"ایکسیسبیلٹی اشارے کو <xliff:g id="SERVICE">%1$s</xliff:g> پر سیٹ کر دیا گیا۔ میگنیفکیشن استعمال کرنے کے لیے، اسکرین کے نیچے سے دو انگلیوں سے اوپر سوائپ اور ہولڈ کریں۔ پھر میگنیفکیشن منتخب کریں۔"</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"والیوم کی کلید کا شارٹ کٹ"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"شارٹ کٹ کی ترتیبات"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"مقفل اسکرین سے شارٹ کٹ"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"خصوصیت کے شارٹ کٹ کو مقفل اسکرین سے آن کرنے کی اجازت دیں۔ والیوم کی دونوں کلیدوں کو کچھ سیکنڈز تک دبائے رکھیں۔"</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"ایکسیسبیلٹی بٹن"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"ایکسیسبیلٹی بٹن اور اشارہ"</string>
@@ -3347,7 +3351,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"آف ہے"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{کوئی نہیں}=1{1 شیڈول سیٹ ہے}other{# شیڈول سیٹ ہیں}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"ڈسٹرب نہ کریں"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"ترجیحی وضع"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"انتشارات کو کم کریں اور نیند، کام، ڈرائیونگ اور اس کے درمیان ہر چیز کے طریقوں کے ساتھ اپنی توجہ پر قابو رکھیں۔"</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"اپنی خود کی وضع تخلیق کریں"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"صرف اہم لوگوں اور ایپس کی جانب سے اطلاعات حاصل کریں"</string>
@@ -3642,9 +3647,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"یہ پیغامات کا جواب دے سکتی ہے اور اطلاعات میں بٹن پر کاروائی کر سکتی ہے، بشمول اطلاعات کو اسنوز کرنا یا مسترد کرنا اور کالز کا جواب دینا۔"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"آپ کی ترتیبات تبدیل کر سکے گی"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"یہ \'ڈسٹرب نہ کریں\' کو آن یا آف کر سکتی ہے اور متعلقہ ترتیبات تبدیل کر سکتی ہے۔"</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"اس سے ترجیحی موڈز کو نظم اور فعال کیا جا سکتا ہے اور متعلقہ ترتیبات کو تبدیل کیا جا سکتا ہے۔"</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"اگر آپ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> کیلئے اطلاع کی رسائی آف کرتے ہیں تو ڈسٹرب نہ کریں کی رسائی بھی آف ہو سکتی ہے۔"</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"اگر آپ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> کیلئے اطلاع کی رسائی آف کرتے ہیں تو ترجیحی موڈز تک رسائی بھی آف ہو سکتی ہے۔"</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"آف کریں"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"منسوخ کریں"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ریئل-ٹائم"</string>
@@ -3705,9 +3712,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"ڈسٹرب نہ کریں تک رسائی"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'ڈسٹرب نہ کریں\' کو اجازت دیں"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"کسی انسٹال کردہ ایپس نے ڈسٹرب نہ کریں تک رسائی کی درخواست نہیں کی ہے"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"ترجیحی موڈز تک رسائی"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"ترجیحی موڈز تک رسائی کی اجازت دیں"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"کسی انسٹال کردہ ایپ نے ترجیحی موڈز تک رسائی کی درخواست نہیں کی ہے"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"آپ نے اس ایپ سے اطلاعات کی اجازت نہیں دی ہے"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"‏آپ کی درخواست پر، Android اطلاعات کے اس زمرے کو اس آلہ پر ظاہر ہونے سے مسدود کررہا ہے"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"‏آپ کی درخواست پر، Android اطلاعات کے اس گروپ کو اس آلہ پر ظاہر ہونے سے مسدود کر رہا ہے"</string>
@@ -4098,9 +4108,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"آن رہنا چاہئیے کیونکہ اطلاع کی رسائی آن ہے"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> کیلئے \'ڈسٹرب نہ کریں\' تک رسائی منسوخ کریں؟"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"اس ایپ کی جانب سے تخلیق کردہ تمام \'ڈسٹرب نہ کریں\' اصول ہٹا دیے جائیں گے۔"</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> کے لیے ترجیحی موڈز تک رسائی کی اجازت دیں؟"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"ایپ \'ڈسٹرب نہ کریں\' کو آن/آف کر سکے گی، ترجیحی موڈز کا نظم اور فعال کر سکے گی اور متعلقہ ترتیبات میں تبدیلیاں کر سکے گی۔"</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g> کے لیے ترجیحی موڈز تک رسائی کو کالعدم کریں؟"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"اس ایپ کی جانب سے تخلیق کردہ سبھی موڈز ہٹا دیے جائیں گے۔"</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"بہترین مت بنائیں"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"بہترین بنائیں"</string>
@@ -5151,52 +5164,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> اس فون سے منسلک ہونا چاہتا ہے۔\n\nآپ پہلے کبھی بھی <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> سے منسلک نہیں ہوئے ہیں۔"</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"منسلک نہ کریں"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"منسلک کریں"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"‏TARE کی ترتیبات"</string>
-    <string name="tare_on" msgid="2386073225978684535">"آن"</string>
-    <string name="tare_off" msgid="6305694402929756726">"آف"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"ڈیفالٹ ترتیبات پر لوٹائیں"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"ترتیبات ڈیفالٹ پر لوٹا دی گئیں۔"</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"زیادہ سے زیادہ مطمئن بیلنس"</string>
-    <string name="tare_balances" msgid="731881382594747961">"بیلنسز"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"کھپت کی حدود"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"ابتدائی کھپت کی حد"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"کم از کم کھپت کی حد"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"زیادہ سے زیادہ کھپت کی حد"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"موڈیفائرز"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"کارروائیاں (پروڈیوس کرنے کی لاگت)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"کارروائیاں (بنیادی قیمت)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"فی واحد ایونٹ انعامات"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ایونٹ کے دورانیے کے فی سیکنڈ انعامات"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"فی دن زیادہ سے زیادہ انعامات"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"ایپ انسٹال"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"سرفہرست سرگرمی"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"اطلاع کو دیکھا گیا"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"اطلاع کو 15 منٹ کے اندر دیکھا گیا"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"اطلاع کا تعامل"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"ویجیٹ تعامل"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"صارف کے دیگر تعامل"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"زیادہ سے زیادہ ترجیح والی جاب شروع ہو رہی ہے"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"زیادہ سے زیادہ ترجیح والی جاب چل رہی ہے"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"زیادہ ترجیح والی جاب شروع ہو رہی ہے"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"زیادہ ترجیح والی جاب چل رہی ہے"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"ڈیفالٹ ترجیح والی جاب شروع ہو رہی ہے"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"ڈیفالٹ ترجیح والی جاب چل رہی ہے"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"کم ترجیح والی جاب شروع ہو رہی ہے"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"کم ترجیح والی جاب چل رہی ہے"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"کم از کم ترجیح والی جاب شروع ہو رہی ہے"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"کم از کم ترجیح والی جاب چل رہی ہے"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"جاب ٹائم آؤٹ کی سزا"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"کم از کم مطمئن بیلنس (مستثنیٰ)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"کم از کم مطمئن بیلنس (ہیڈ لیس سسٹم ایپ)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"کم از کم مطمئن بیلنس (باقی ایپس)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"کم از کم مطمئن بیلنس کا اضافہ (ایپ کے اپ ڈیٹ کنندگان)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"چارج ہو رہی ہے"</item>
-    <item msgid="658627268149681677">"اونگھ"</item>
-    <item msgid="1599558140284643834">"پاور محفوظ کرنے کی وضع"</item>
-    <item msgid="588427840913221601">"پروسیس اسٹیٹ"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"تصدیق کریں"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"پیش منظر"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"اسکرین سیور منتخب کریں"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"اضافی معلومات دکھائیں"</string>
@@ -5398,6 +5365,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"آڈیو کا اشتراک رک گیا"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"ایک موافق آلہ سے منسلک کریں"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"‏آڈیو کا اشتراک شروع کرنے کے لیے، پہلے LE آڈیو ہیڈ فونز کو اپنے فون سے منسلک کریں"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"‏LE آڈیو سلسلہ سے منسلک کریں"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"قریبی آڈیو سلسلے"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"آڈیو سلسلے"</string>
@@ -5442,5 +5411,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"‏<xliff:g id="DEVICE_NAME">%1$s</xliff:g> کے ساتھ سننے کے لئے آڈیو سلسلے کا QR کوڈ اسکین کریں"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"اشتراک کے دوران پاس ورڈ میں ترمیم نہیں کر سکتے۔ پاس ورڈ تبدیل کرنے کے لئے پہلے آڈیو کا اشتراک بند کریں۔"</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"‏QR کوڈ اسکینر"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"تلاش کی ترتیبات"</string>
 </resources>
