--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -411,8 +411,7 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Ubuso ne-<xliff:g id="WATCH">%s</xliff:g> zingeziwe"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Ubuso, isigxivizo somunwe, ne-<xliff:g id="WATCH">%s</xliff:g> kungeziwe"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Ubuso, izigxivizo zomunwe, ne-<xliff:g id="WATCH">%s</xliff:g> kungeziwe"</string>
-    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
-    <skip />
+    <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Ukuhlola Ubunikazi kuvuliwe futhi kudinga ibiometric"</string>
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Ukuvula Isiqinisekisi Serimothi"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Iwashi lifakiwe"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Setha iwashi lakho"</string>
@@ -839,8 +838,7 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Izilungiselelo zekhibhodi"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Amanye amasethingi"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Izibuyekezo zeFirmware, mayelana, nokuningi"</string>
-    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
-    <skip />
+    <string name="bluetooth_device_tip_support" msgid="6072338493592606897">"Amathiphu nosekelo"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Ikheli le-Bluetooth yedivayisi: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Ikheli le-Bluetooth yedivayisi: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Khohlwa idivayisi?"</string>
@@ -1994,6 +1992,10 @@
     <string name="modifier_keys_reset" msgid="551170906710422041">"Setha kabusha"</string>
     <string name="modifier_keys_picker_title" msgid="244545904150587851">"Khetha ukhiye wokushintsha"</string>
     <string name="modifier_keys_picker_summary" msgid="739397232249560785">"Khetha ukhiye omusha we-<xliff:g id="MODIFIER_KEY_DEFAULT_NAME">%1$s</xliff:g>:"</string>
+    <!-- no translation found for keyboard_a11y_settings (2564659018555385728) -->
+    <skip />
+    <!-- no translation found for keyboard_a11y_settings_summary (1698531156574098722) -->
+    <skip />
     <string name="ime_label_title" msgid="8994569521516807168">"Isakhiwo se-<xliff:g id="IME_LABEL">%s</xliff:g>"</string>
     <string name="default_keyboard_layout" msgid="8690689331289452201">"Okuzenzakalelayo"</string>
     <string name="automatic_keyboard_layout_label" msgid="9138088156046198913">"Okuzenzekelayo: <xliff:g id="LAYOUT_LABEL">%s</xliff:g>"</string>
@@ -2205,9 +2207,11 @@
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"Okuthuthukile"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"Inkinobho yokufinyelela isethelwe ku-<xliff:g id="SERVICE">%1$s</xliff:g>. Ukuze usebenzise ukushintsha, thinta futhi ubambe inkinobho yokufinyelela, bese ukhethe ukushintsha."</string>
     <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"Ukuthinta kokufinyelela kusethelwe ku-<xliff:g id="SERVICE">%1$s</xliff:g>. Ukuze usebenzise ukushintsha usayizi, swayiphela phezulu ngeminwe emibili kusuka phansi kwesikrini futhi ubambe. Bese khetha ukulungisa."</string>
-    <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"Isinqamuleli sokhiye wevolumu"</string>
+    <!-- no translation found for accessibility_global_gesture_preference_title (8866765674372344850) -->
+    <skip />
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"Izilungiselelo zesinqamuleli"</string>
-    <string name="accessibility_shortcut_service_on_lock_screen_title" msgid="3923122834058574478">"Isinqamuleki kusuka kusikrini sokukhiya"</string>
+    <!-- no translation found for accessibility_shortcut_service_on_lock_screen_title (2301019277262462426) -->
+    <skip />
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"Vumela isinqamuleli sesici ukuvula kusuka kusikrini sokukhiya. Bamba bobabili okhiye bevolumu amasekhondi ambalwa."</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"Inkinobho yokufinyeleleka"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"Inkinobho yokufinyeleleka nokuthinta"</string>
@@ -3348,7 +3352,8 @@
     <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Valiwe"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Lutho}=1{ishejuli esethiwe e-1}one{amashejuli asethiwe angu-#}other{amashejuli asethiwe angu-#}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Ungaphazamisi"</string>
-    <string name="zen_modes_list_title" msgid="5138745349253275428">"Amamodi Abalulekile"</string>
+    <!-- no translation found for zen_modes_list_title (4796033710444068729) -->
+    <skip />
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"Nciphisa iziphazamiso futhi ulawule ukunaka kwakho ngamamodi okulala, umsebenzi, ukushayela, nayo yonke into ephakathi."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"Sungula imodi yakho"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Yaziswa kuphela abantu ababalulekile nezinhlelo zokusebenza"</string>
@@ -3643,9 +3648,11 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Ingakwazi ukuphendula imilayezo futhi ithathe isinyathelo kuzinkinobho zezaziso, okuhlanganisa ukusnuza noma ukucashisa izaziso nokuphendula amakholi."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Shintsha amasethingi"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Ingakwazi ukuvula noma ukuvala okuthi Ungaphazamisi futhi iguqule amasethingi ahlobene."</string>
-    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Ingaphatha futhi yenze kusebenze Amamodi Abalulekile, futhi iguqule amasethingi ahlobene."</string>
+    <!-- no translation found for nls_feature_modes_settings_summary (70022458305195595) -->
+    <skip />
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Uma uvala ukufinyelela kwezaziso kwe-<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, Ukufinyelela kokuthi ungaphazamisi nakho kungavalwa."</string>
-    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Uma uvala ukufinyelela kwesaziso kwe-<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, ukufinyelela Kwamamodi Abalulekile nakho kungase kuvalwe."</string>
+    <!-- no translation found for notification_listener_disable_modes_warning_summary (7528432011433844158) -->
+    <skip />
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Vala"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Khansela"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Isikhathi sangempela"</string>
@@ -3706,9 +3713,12 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Ukufinyelela kokungaphazamisi"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Vumela ukungaphazamisi"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Azikho izinhlelo zokusebenza ezifakiwe ezicele ukufinyelela kokungaphazamisi"</string>
-    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Ukufinyelela Amamodi Abalulekile"</string>
-    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Vumela Amamodi Abalulekile afinyelele"</string>
-    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Awekho ama-app afakiwe acele ukufinyelela Emamodini Abalulekile"</string>
+    <!-- no translation found for manage_zen_modes_access_title (2520680004915648824) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_detail_switch (4060429747631111299) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_empty_text (8750927923904377110) -->
+    <skip />
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Awukavumeli izaziso ezivela kule app"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Ngokwesicelo sakho i-Android ivimbela lesi sigaba sezaziso kusukela ekuveleni kule divayisi"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Ngokwesicelo sakho i-Android ivimbela leli qembu lezaziso kusukela ekuveleni kule divayisi"</string>
@@ -4099,9 +4109,12 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Kufanele kuhlale kuvuliwe ngoba ukufinyelela kwesaziso kuvuliwe"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Buyisa ukufinyelela kokuthi Ungaphazamisi ku-<xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Yonke imithetho Ungaphazamisi edalwe yilolu hlelo lokusebenza kuzosuswa."</string>
-    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Vumela ukufinyelela Kumamodi Abalulekile we-<xliff:g id="APP">%1$s</xliff:g>?"</string>
-    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"I-app izokwazi ukuvula/ukuvala okuthi Ungaphazamisi, iphathe futhi yenze kusebenze Amamodi Abalulekile, futhi yenze izinguquko emasethingini ahlobene."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Hoxisa ukufinyelela Amamodi Abalulekile we-<xliff:g id="APP">%1$s</xliff:g>?"</string>
+    <!-- no translation found for zen_modes_access_warning_dialog_title (8372164559156809659) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_warning_dialog_summary (2432178679607798200) -->
+    <skip />
+    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (6288548508466545492) -->
+    <skip />
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Wonke amamodi asungulwe yile app azosuswa."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Ungalungiseleli"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Lungiselela"</string>
@@ -5152,52 +5165,6 @@
     <string name="bluetooth_connect_access_dialog_content" msgid="4336436466468405850">"I-<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g> ifuna ukuxhuma kule foni.\n\nAwuxhumile ku-<xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> ngaphambilini."</string>
     <string name="bluetooth_connect_access_dialog_negative" msgid="4944672755226375059">"Ungaxhumi"</string>
     <string name="bluetooth_connect_access_dialog_positive" msgid="3630561675207269710">"Xhuma"</string>
-    <string name="tare_settings" msgid="3788654800004869077">"Amasethingi we-TARE"</string>
-    <string name="tare_on" msgid="2386073225978684535">"Vuliwe"</string>
-    <string name="tare_off" msgid="6305694402929756726">"Valiwe"</string>
-    <string name="tare_revert" msgid="3855325741125236638">"Buyela Kumasethingi Wokuzenzakalelayo"</string>
-    <string name="tare_settings_reverted_toast" msgid="8189887409285176731">"Amasethingi abuyiselwe kokuzenzakalelayo."</string>
-    <string name="tare_max_satiated_balance" msgid="3914973999573150340">"Ibhalansi Egculisiwe Ephezulu"</string>
-    <string name="tare_balances" msgid="731881382594747961">"Amabhalansi"</string>
-    <string name="tare_consumption_limits" msgid="3230949387874396382">"Ukusetshenziswa Kwemikhawulo"</string>
-    <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Umkhawulo Wokusebenzisa Wokuqala"</string>
-    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Umkhawulo Wokusebenzisa Ophansi"</string>
-    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Umkhawulo Wokusebenzisa Omkhulu"</string>
-    <string name="tare_modifiers" msgid="8919975635360280820">"Abashintshi"</string>
-    <string name="tare_actions_ctp" msgid="5110104015354916401">"Izenzo (Izindleko Zokukhiqiza)"</string>
-    <string name="tare_actions_base_price" msgid="3300967942666376589">"Izenzo (Intengo Eyisisekelo)"</string>
-    <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Imiklomelo yomcimbi ngamunye"</string>
-    <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Imiklomelo ngomzuzwana ngamunye wobude bomcimbi"</string>
-    <string name="tare_rewards_max" msgid="5283055625642837010">"Imiklomelo Ephezulu Ngosuku"</string>
-    <string name="tare_app_install" msgid="7955806910408116882">"Ukufaka i-App"</string>
-    <string name="tare_top_activity" msgid="7266560655483385757">"Umsebenzi Ophezulu"</string>
-    <string name="tare_notification_seen" msgid="7829963536020087742">"Isaziso Siboniwe"</string>
-    <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Isaziso Sibonwe Phakathi Nemizuzu eyi-15"</string>
-    <string name="tare_notification_interaction" msgid="3806204222322830129">"Ukusebenzisana Kwesaziso"</string>
-    <string name="tare_widget_interaction" msgid="2260701564089214184">"Ukusebenzisana Kwewijethi"</string>
-    <string name="tare_other_interaction" msgid="8069163421115212751">"Okunye Ukusebenzisana Komsebenzisi"</string>
-    <string name="tare_job_max_start" msgid="1586399578665940836">"Ukuqala Komsebenzi Okuphezulu"</string>
-    <string name="tare_job_max_running" msgid="2897217372986518495">"Ukusebenza Okuphezulu Komsebenzi"</string>
-    <string name="tare_job_high_start" msgid="7464143754932031022">"Ukuqala Okuphezulu Komsebenzi"</string>
-    <string name="tare_job_high_running" msgid="6541171046405088669">"Ukusebenza Okuphezulu Komsebenzi"</string>
-    <string name="tare_job_default_start" msgid="6744427210148953151">"Ukuqala Okuzenzekelayo Komsebenzi"</string>
-    <string name="tare_job_default_running" msgid="8429081804128945217">"Ukusebenza Okuzenzekelayo Komsebenzi"</string>
-    <string name="tare_job_low_start" msgid="4605440035856891746">"Ukuqala Okuphansi Komsebenzi"</string>
-    <string name="tare_job_low_running" msgid="831668616902849604">"Ukusebenza Komsebenzi Okuphansi"</string>
-    <string name="tare_job_min_start" msgid="6508233901992538188">"Ukuqala Komsebenzi Okuphansi"</string>
-    <string name="tare_job_min_running" msgid="6167128996320622604">"Ukusebenza Komsebenzi Okuphansi"</string>
-    <string name="tare_job_timeout_penalty" msgid="7644332836795492506">"Inhlawulo Yesikhathi Sokuvala Umsebenzi"</string>
-    <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Ibhalansi Enelisekile (Ikhululiwe)"</string>
-    <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Ibhalansi Enelisekile (I-App Yesistimu Engenazinhloko)"</string>
-    <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Ibhalansi Enelisekile (Ama-app Asele)"</string>
-    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Ukwengezwa Kwebhalansi Egcwalisiwe Encane (Izibuyekezi ze-App)"</string>
-  <string-array name="tare_modifiers_subfactors">
-    <item msgid="3325940509857535498">"Iyashaja"</item>
-    <item msgid="658627268149681677">"Ukozela"</item>
-    <item msgid="1599558140284643834">"Imodi Yokonga Amandla"</item>
-    <item msgid="588427840913221601">"Isimo Sokucubungula"</item>
-  </string-array>
-    <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Qinisekisa"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Hlola kuqala"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Khetha isilondolozi sesikrini"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Bonisa ulwazi olwengeziwe"</string>
@@ -5399,6 +5366,8 @@
     <string name="audio_sharing_sharing_stopped_label" msgid="8128194452354240996">"Ukwabelana ngokuqoshiwe kumisiwe"</string>
     <string name="audio_sharing_confirm_dialog_title" msgid="7655147122624691167">"Xhuma amadivayisi ahambelanayo"</string>
     <string name="audio_sharing_comfirm_dialog_content" msgid="3479217934447446066">"Ukuze uqale ukwabelana ngokulalelwayo, okokuqala xhuma ama-headphone e-LE Audio efonini yakho"</string>
+    <!-- no translation found for audio_sharing_switch_active_button_label (3065600513067122124) -->
+    <skip />
     <string name="audio_streams_category_title" msgid="4878022761829895463">"Xhuma ekusakazeni komsindo we-LE"</string>
     <string name="audio_streams_pref_title" msgid="6320485086288646209">"Ukusakaza komsindo okuseduze"</string>
     <string name="audio_streams_title" msgid="6617990880383079165">"Ukusakaza komsindo"</string>
@@ -5443,5 +5412,7 @@
     <string name="audio_streams_main_page_qr_code_scanner_summary" msgid="5312980105735143360">"Skena ikhodi ye-QR yokusakaza komsindo ukuze ulalele nge-<xliff:g id="DEVICE_NAME">%1$s</xliff:g>"</string>
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Ayikwazi ukuhlela iphasiwedi ngenkathi yabelana. Ukuze ushintshe iphasiwedi, qala uvale ukwabelana ngokuqoshiwe."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"Iskena sekhodi ye-QR"</string>
+    <!-- no translation found for audio_streams_qr_code_help_with_link (5542328067190486479) -->
+    <skip />
     <string name="homepage_search" msgid="6759334912284663559">"Amasethingi Okusesha"</string>
 </resources>
